--- a/tex/modules/2-V/exercises/V4.tex
+++ b/tex/modules/2-V/exercises/V4.tex
@@ -9,11 +9,7 @@ Show that one of these sets is a subspace of \(\IR^2\), and
 that one of the sets is not.
 \end{problem}
 \begin{solution}
-\(W\) is not a subspace; for example, \(\begin{bmatrix} 1 \\ 1 \end{bmatrix}\)
-belongs to \(W\) while \(\frac{1}{2}\begin{bmatrix} 1 \\ 1 \end{bmatrix}\)
-does not.
-
-\(U\) is a subspace.
+\(W\) is not a subspace.  \(U\) is a subspace.
 \end{solution}
 
 \begin{problem}{V4}
@@ -27,9 +23,7 @@ Show that one of these sets is a subspace of \(\IR^4\), and
 that one of the sets is not.
 \end{problem}
 \begin{solution}
-\(U\) is not a subspace; for example, it doesn't contain the zero vector.
-
-\(W\) is a subspace.
+\(U\) is not a subspace. \(W\) is a subspace.
 \end{solution}
 
 
@@ -46,9 +40,7 @@ Show that one of these sets is a subspace of \(\IR^3\), and
 that one of the sets is not.
 \end{problem}
 \begin{solution}
-\(W\) is not a subspace; for example, it doesn't contain the zero vector.
-
-\(U\) is a subspace.
+\(W\) is not a subspace.  \(U\) is a subspace.
 \end{solution}
 
 
@@ -63,9 +55,7 @@ Show that one of these sets is a subspace of \(\IR^3\), and
 that one of the sets is not.
 \end{problem}
 \begin{solution}
-\(U\) is not a subspace; for example, it doesn't contain the zero vector.
-
-\(W\) is a subspace.
+\(U\) is not a subspace.  \(W\) is a subspace.
 \end{solution}
 
 \begin{problem}{V4}
@@ -79,12 +69,7 @@ Show that one of these sets is a subspace of \(\IR^2\), and
 that one of the sets is not.
 \end{problem}
 \begin{solution}
-\(U\) is not a subspace; for example, \(\begin{bmatrix} 1 \\ 0 \end{bmatrix}\)
-and \(\begin{bmatrix} 0 \\ 1 \end{bmatrix}\) belong to \(U\) while
-\(\begin{bmatrix} 1 \\ 0 \end{bmatrix}+\begin{bmatrix} 0 \\ 1 \end{bmatrix}\)
-does not.
-
-\(W\) is a subspace.
+\(U\) is not a subspace.  \(W\) is a subspace.
 \end{solution}
 
 \begin{problem}{V4}
@@ -98,12 +83,7 @@ Show that one of these sets is a subspace of \(\IR^2\), and
 that one of the sets is not.
 \end{problem}
 \begin{solution}
-\(U\) is not a subspace; for example, \(\begin{bmatrix} 1 \\ 1 \end{bmatrix}\)
-and \(\begin{bmatrix} 1 \\ -1 \end{bmatrix}\) belong to \(U\) while
-\(\begin{bmatrix} 1 \\ 1 \end{bmatrix}+\begin{bmatrix} 1 \\ -1 \end{bmatrix}\)
-does not.
-
-\(W\) is a subspace.
+\(U\) is not a subspace.  \(W\) is a subspace.
 \end{solution}
 
 \begin{problem}{V4}
@@ -117,11 +97,7 @@ Show that one of these sets is a subspace of \(\IR^2\), and
 that one of the sets is not.
 \end{problem}
 \begin{solution}
-\(U\) is not a subspace; for example, \(\begin{bmatrix} 1 \\ 1 \end{bmatrix}\)
-and \(\begin{bmatrix} 2 \\ 4 \end{bmatrix}\) belong to \(U\) while
-\(\begin{bmatrix} 1 \\ 1 \end{bmatrix}+\begin{bmatrix} 2 \\ 4 \end{bmatrix}\)
-does not.
-
+\(U\) is not a subspace.
 \(W\) is a subspace.
 \end{solution}
 
@@ -137,10 +113,6 @@ Show that one of these sets is a subspace of \(\IR^3\), and
 that one of the sets is not.
 \end{problem}
 \begin{solution}
-\(W\) is not a subspace; for example,
-\(\begin{bmatrix} 1 \\ 1 \\ 2 \end{bmatrix}\) belongs to \(W\) while
-\(\begin{bmatrix} 2 \\ 2 \\ 4 \end{bmatrix}\)
-does not.
-
+\(W\) is not a subspace.
 \(U\) is a subspace.
 \end{solution}
