--- a/tex/modules/2-V/exercises/V7.tex
+++ b/tex/modules/2-V/exercises/V7.tex
@@ -2,10 +2,7 @@
 Let \(W = \vspan  \left( \setList{ \begin{bmatrix} 1 \\ 1 \\ 2 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ 3 \\ 6 \\ 3 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ 3 \\ -2 \end{bmatrix}, \begin{bmatrix} 7 \\ -1 \\ 8 \\ -3 \end{bmatrix} } \right)\).  Find a basis for \(W\).
 \end{problem}
 \begin{solution}
-\[\RREF\left(\begin{bmatrix} 1 & 3 & 3 & 7 \\ 1 & 3 & -1 & -1 \\ 2 & 6 & 3 & 8 \\ 1 & 3 & -2 & -3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 3 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \\  0 & 0 & 0 & 0 \end{bmatrix}\]
-
-Thus a basis is given by its pivot columns:
-\(\setList{ \begin{bmatrix} 1 \\ 1 \\ 2 \\ 1 \end{bmatrix} , \begin{bmatrix} 3 \\ -1 \\ 3 \\ -2 \end{bmatrix}}\).
+\(\setList{ \begin{bmatrix} 1 \\ 1 \\ 2 \\ 1 \end{bmatrix} , \begin{bmatrix} 3 \\ -1 \\ 3 \\ -2 \end{bmatrix}}\) is a basis for \(W\).
 \end{solution}
 
 
@@ -16,8 +13,7 @@ Thus a basis is given by its pivot columns:
 Let \(W = \vspan  \left( \setList{  \begin{bmatrix} -3 \\ -8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix}, \begin{bmatrix} 0 \\ -1 \\ 3 \end{bmatrix} } \right)\).   Find a basis for \(W\).
 \end{problem}
 \begin{solution}
-Let \(A= \begin{bmatrix}-3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3\end{bmatrix}\), and compute \(\RREF(A) = \begin{bmatrix} 1 & 0 & \frac{1}{2} \\ 0 & 1 & \frac{3}{2} \\ 0 & 0 & 0 \end{bmatrix}\).
-Since the first two columns are pivot columns, \(\setList{ \begin{bmatrix} -3 \\ -8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix} } \) is a basis for \(W\).
+\(\setList{ \begin{bmatrix} -3 \\ -8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix} } \) is a basis for \(W\).
 \end{solution}
 
 
@@ -27,8 +23,7 @@ Since the first two columns are pivot columns, \(\setList{ \begin{bmatrix} -3 \\
 Let \(W=\vspan \left(\setList{\begin{bmatrix} 2 \\ 0 \\ -2 \\ 0 \end{bmatrix}, \begin{bmatrix} 3 \\ 1 \\ 3 \\ 6 \end{bmatrix}, \begin{bmatrix} 0 \\ 0 \\ 1 \\ 1 \end{bmatrix}, \begin{bmatrix}1 \\ 2 \\ 0 \\ 1 \end{bmatrix}}\right)\).  Find a basis of \(W\).
 \end{problem}
 \begin{solution}
-\[\RREF\left( \begin{bmatrix} 2 & 3 & 0 & 1 \\ 0 & 1 & 0 & 2 \\ -2 & 3 & 1 & 0 \\ 0 & 6 & 1 & 1\end{bmatrix} \right) = \begin{bmatrix}1 & 0 & 0 & -\frac{5}{2} \\ 0 & 1 & 0 & 2 \\ 0 & 0 & 1 & -11\\ 0 & 0 & 0 & 0  \end{bmatrix}\]
-Then its pivot columns \(\setList{\begin{bmatrix} 2 \\ 0 \\ -2 \\ 0 \end{bmatrix}, \begin{bmatrix} 3 \\ 1 \\ 3 \\ 6 \end{bmatrix}, \begin{bmatrix} 0 \\ 0 \\ 1 \\ 1 \end{bmatrix}}\) form a basis of \(W\).
+\(\setList{\begin{bmatrix} 2 \\ 0 \\ -2 \\ 0 \end{bmatrix}, \begin{bmatrix} 3 \\ 1 \\ 3 \\ 6 \end{bmatrix}, \begin{bmatrix} 0 \\ 0 \\ 1 \\ 1 \end{bmatrix}}\) is a basis of \(W\).
 \end{solution}
 
 
@@ -36,8 +31,7 @@ Then its pivot columns \(\setList{\begin{bmatrix} 2 \\ 0 \\ -2 \\ 0 \end{bmatrix
 Let \(W=\vspan \left( \setList{ \begin{bmatrix} 1 \\ -1 \\ 3 \\ -3 \end{bmatrix},\begin{bmatrix} 2 \\ 0 \\ 1 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ 4 \\ -2 \end{bmatrix},  \begin{bmatrix} 1 \\ 1 \\ 1 \\ -7 \end{bmatrix} }\right)\).  Find a basis of \(W\).
 \end{problem}
 \begin{solution}
-\[\RREF \left( \begin{bmatrix} 1 & 2 & 3 & 1 \\ -1 & 0 & -1 & 1 \\ 3 & 1 & 4 & 1 \\ -3 & 1 & -2 & -7 \end{bmatrix} \right) =  \begin{bmatrix} 1 & 0 & 1 & 0 \\ 0 & 1 & 1 & 0 \\ 0 & 0 & 0 & 1 \\ 0 & 0 & 0 & 0\end{bmatrix}\]
-Thus its pivot columns  \(\setList{ \begin{bmatrix} 1 \\ -1 \\ 3 \\ -3 \end{bmatrix},\begin{bmatrix} 2 \\ 0 \\ 1 \\ 1 \end{bmatrix},   \begin{bmatrix} 1 \\ 1 \\ 1 \\ -7 \end{bmatrix} }\) form a basis for \(W\).
+ \(\setList{ \begin{bmatrix} 1 \\ -1 \\ 3 \\ -3 \end{bmatrix},\begin{bmatrix} 2 \\ 0 \\ 1 \\ 1 \end{bmatrix},   \begin{bmatrix} 1 \\ 1 \\ 1 \\ -7 \end{bmatrix} }\) is a basis for \(W\).
 \end{solution}
 
 
@@ -54,24 +48,10 @@ Let \(
 \). Find a basis for this vector space.
 \end{problem}
 \begin{solution}
-\[
-  \RREF\left(\begin{bmatrix}
-    2 & 3 & 0 \\
-    0 & 1 & 2 \\
-    2 & -1 & -8 \\
-    1 & 1 & -1
-  \end{bmatrix} \right) =
-  \begin{bmatrix}
-    1 & 0 & -3 \\
-    0 & 1 & 2 \\
-    0 & 0 & 0 \\
-    0 & 0 & 0
-  \end{bmatrix}
-\]
-Thus its pivot columns \(\setList{
+\(\setList{
   \begin{bmatrix} 2 \\ 0 \\ 2 \\ 1 \end{bmatrix},
   \begin{bmatrix} 3 \\ 1 \\ -1 \\ 1 \end{bmatrix}
-}\) form a basis of \(W\).
+}\) is a basis of \(W\).
 \end{solution}
 
 \begin{problem}{V7}
@@ -85,22 +65,10 @@ Let \(
 \). Find a basis for this vector space.
 \end{problem}
 \begin{solution}
-\[
-  \RREF\begin{bmatrix}
-    2 & 3 & 1 & -4 \\
-    -1 & 12 & 4 & 2 \\
-    4 & -9 & -3 & -8
-  \end{bmatrix} =
-  \begin{bmatrix}
-    1 & 0 & 0 & -2 \\
-    0 & 1 & 1/3 & 0 \\
-    0 & 0 & 0 & 0
-  \end{bmatrix}
-\]
-Thus its pivot columns \(\setList{
+\(\setList{
   \begin{bmatrix} 2 \\ -1 \\ 4 \end{bmatrix},
   \begin{bmatrix} 3 \\ 12 \\ -9 \end{bmatrix}
-}\) form a basis of \(W\).
+}\) is a basis of \(W\).
 \end{solution}
 
 \begin{problem}{V7}
@@ -114,23 +82,9 @@ Let \(
 \). Find a basis for this vector space.
 \end{problem}
 \begin{solution}
-\[
-  \RREF\begin{bmatrix}
-    2 & -4 & 3 & 1  \\
-    -1 & 2 & 12 & 2  \\
-    4 & -8 & -9 & 3 \\
-    2 & -4 & 2 & 2
-  \end{bmatrix} =
-  \begin{bmatrix}
-    1 & -2 & 0 & 0 \\
-    0 & 0 & 1 & 0 \\
-    0 & 0 & 0 & 1 \\
-    0 & 0 & 0 & 0
-  \end{bmatrix}
-\]
-Thus its pivot columns \(\setList{
+ \(\setList{
   \begin{bmatrix} 2 \\ -1 \\ 4 \\2 \end{bmatrix},
   \begin{bmatrix} 3 \\ 12 \\ -9 \\2 \end{bmatrix},
   \begin{bmatrix} 1 \\ 2 \\ 3 \\2 \end{bmatrix}
-}\) form a basis of \(W\).
+}\) is a basis of \(W\).
 \end{solution}
