--- a/tex/modules/2-V/sections/0.tex
+++ b/tex/modules/2-V/sections/0.tex
@@ -55,6 +55,9 @@ and \textbf{invalid} if it does not.
   Let \(\vec u,\vec v,\vec w\) belong to \(V\), and let \(a,b\) be scalar numbers.
 
   \vectorSpaceProperties
+\end{definition}
+
+\begin{observation}
 
   Every \term{Euclidean vector space}
   \[
@@ -63,7 +66,7 @@ and \textbf{invalid} if it does not.
   satisfies all eight requirements for the usual definitions of addition
   and scalar multiplication,
   but we will also study other types of vector spaces.
-\end{definition}
+\end{observation}
 
 
 \end{applicationActivities}
