--- a/tex/modules/2-V/sections/1.tex
+++ b/tex/modules/2-V/sections/1.tex
@@ -100,16 +100,13 @@
   .\]
 
   \begin{subactivity}
-    Show that \(1\) an the scalar multiplication identity satisfying
-    \[1\odot(x,y)=(x,y)\]
-    by simplifying \(1\odot(x,y)\) to \((x,y)\).
+    Show that \(1\) is the scalar multiplication identity element
+	by simplifying \(1\odot(x,y)\) to \((x,y)\).
   \end{subactivity}
 
   \begin{subactivity}
-    Show that there cannot exist an addition identity property satisfying
-    \[\vec v\oplus \vec z=\vec v\]
-    for all vectors \(\vec v\in V\)
-    by showing that \((0,-1)\oplus\vec z\not=(0,-1)\) no matter how
+    Show that \(V\) does not have an additive identity element by showing that 
+	\((0,-1)\oplus\vec z\not=(0,-1)\) no matter how
     \(\vec z=(z_1,z_2)\) is chosen.
   \end{subactivity}
 
