--- a/tex/modules/2-V/standards.tex
+++ b/tex/modules/2-V/standards.tex
@@ -26,7 +26,7 @@
   \standard{Dimension}{Dim}{
     compute the dimension of a subspace of \(\IR^n\).
   }
-  \standard{Abstract vector spaces}{AbsVec}{
+  \standard{Polynomial basis computation}{PolyBasis}{
     compute a basis for the subspace spanned by a given set of polynomials or matrices.
   }
   \standard{Basis of solution space}{BasSol}{
