--- a/tex/modules/4-A/exercises/A2.tex
+++ b/tex/modules/4-A/exercises/A2.tex
@@ -1,4 +1,46 @@
 \begin{problem}{A2}
+Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\begin{bmatrix} x \\ y \\ z \\  \end{bmatrix} \right) = \begin{bmatrix} -3x+y \\ -8x+2y-z \\ 2y+3z \\ 7x \end{bmatrix}.$$
+\begin{enumerate}[(a)]
+\item Write the standard matrix for $T$.
+\item Compute \( T\left( \begin{bmatrix}-2 \\ 1 \\ 3 \end{bmatrix} \right) \)
+\end{enumerate}
+\end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix} -3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3 \\ 7 & 0 & 0 \end{bmatrix}\)
+\item \( T\left( \begin{bmatrix}-2 \\ 1 \\ 3 \end{bmatrix}  \right) = \begin{bmatrix} 7 \\ 15 \\ 11 \\ -14 \end{bmatrix}  \)
+\end{enumerate}
+\end{solution}
+
+\begin{problem}{A2}
+Let $T: \IR^3 \rightarrow \IR$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3  \end{bmatrix} \right) = \begin{bmatrix} x_3+3x_1 \end{bmatrix}.$$
+\begin{enumerate}[(a)]
+\item Write the standard matrix for $T$.
+\item Compute \( T\left( \begin{bmatrix} -1 \\ 7 \\ 3\end{bmatrix} \right) \)
+\end{enumerate}
+\end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix} 3 & 0 & 1 \end{bmatrix}\)
+\item \(\begin{bmatrix} 0 \end{bmatrix}\)
+\end{enumerate}
+\end{solution}
+
+\begin{problem}{A2}
+Let $T: \IR^3 \rightarrow \IR$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3  \end{bmatrix} \right) = \begin{bmatrix} x_2+3x_3 \end{bmatrix}.$$
+\begin{enumerate}[(a)]
+\item Write the standard matrix for $T$.
+\item Compute \( T\left( \begin{bmatrix} 1 \\ 3 \\ -5\end{bmatrix} \right) \)
+\end{enumerate}
+\end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix} 0 & 1 & 3 \end{bmatrix}\)
+\item \(\begin{bmatrix} -12 \end{bmatrix}\)
+\end{enumerate}
+\end{solution}
+
+\begin{problem}{A2}
 Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\begin{bmatrix} x \\ y \\ z \\  \end{bmatrix} \right) = \begin{bmatrix} -3x+y \\ -8x+2y-z \\ 2y+3z \\ 0 \end{bmatrix}.$$
 \begin{enumerate}[(a)]
 \item Write the standard matrix for $T$.
@@ -39,16 +81,7 @@ Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\
 \end{enumerate}
 \end{problem}
 
-\begin{problem}{A2}
-Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\begin{bmatrix} x \\ y \\ z \\  \end{bmatrix} \right) = \begin{bmatrix} -3x+y \\ -8x+2y-z \\ 2y+3z \\ 7x \end{bmatrix}.$$
-\begin{enumerate}[(a)]
-\item Write the standard matrix for $T$.
-\item Compute \( T\left( \begin{bmatrix}-2 \\ 1 \\ 3 \end{bmatrix} \right) \)
-\end{enumerate}
-\end{problem}
-\begin{solution}
-$$\begin{bmatrix} 3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3 \\ 7 & 0 & 0 \end{bmatrix}$$
-\end{solution}
+
 
 \begin{problem}{A2}
 Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by the standard matrix
@@ -67,8 +100,6 @@ $$\begin{bmatrix} 1 & 0 & 3 & 0 \\ 0 & 3 & -5 & 0 \end{bmatrix}.$$
 \item Compute \( T\left( \begin{bmatrix} 1 \\ 3 \\ -1 \\ 2\end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
-\begin{solution}
-\end{solution}
 
 \begin{problem}{A2}
 Let $T: \IR^2 \rightarrow \IR^4$ be the linear transformation given by the following
@@ -79,8 +110,6 @@ T(\vec e_2)=\begin{bmatrix} 0 \\ 3 \\ -5 \\ 0 \end{bmatrix}.$$
 \item Compute \( T\left( \begin{bmatrix} 2 \\ -3\end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
-\begin{solution}
-\end{solution}
 
 \begin{problem}{A2}
 Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3 \\ x_4 \end{bmatrix} \right) = \begin{bmatrix} x_1+3x_3 \\ 3x_2-x_3 \end{bmatrix}.$$
@@ -100,16 +129,7 @@ Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by $$T\left(
 \end{problem}
 
 
-\begin{problem}{A2}
-Let $T: \IR^3 \rightarrow \IR$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3  \end{bmatrix} \right) = \begin{bmatrix} x_2+3x_3 \end{bmatrix}.$$
-\begin{enumerate}[(a)]
-\item Write the standard matrix for $T$.
-\item Compute \( T\left( \begin{bmatrix} 1 \\ 3 \\ -5\end{bmatrix} \right) \)
-\end{enumerate}
-\end{problem}
-\begin{solution}
-$$\begin{bmatrix} 0 & 1 & 3 \end{bmatrix}$$
-\end{solution}
+
 
 \begin{problem}{A2}
 Let $T: \IR^3 \rightarrow \IR$ be the linear transformation given by the standard matrix
@@ -137,16 +157,7 @@ Let $T: \IR^2 \rightarrow \IR^3$ be the linear transformation given by the follo
 \end{enumerate}
 \end{problem}
 
-\begin{problem}{A2}
-Let $T: \IR^3 \rightarrow \IR$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3  \end{bmatrix} \right) = \begin{bmatrix} x_3+3x_1 \end{bmatrix}.$$
-\begin{enumerate}[(a)]
-\item Write the standard matrix for $T$.
-\item Compute \( T\left( \begin{bmatrix} -1 \\ 7 \\ 3\end{bmatrix} \right) \)
-\end{enumerate}
-\end{problem}
-\begin{solution}
-$$\begin{bmatrix} 3 & 0 & 1 \end{bmatrix}$$
-\end{solution}
+
 
 \begin{problem}{A2}
 Let $T: \IR^3 \rightarrow \IR$ be the linear transformation given by the standard matrix
