--- a/tex/modules/4-A/exercises/A4.tex
+++ b/tex/modules/4-A/exercises/A4.tex
@@ -1,4 +1,4 @@
-\begin{problem}{A3}
+\begin{problem}{A4}
 Determine if the following linear maps are injective (one-to-one) and/or surjective (onto).
 \begin{enumerate}[(a)]
 \item $S: \IR^2 \rightarrow \IR^3$ given by $S\left(\begin{bmatrix} x \\ y  \end{bmatrix} \right) = \begin{bmatrix} 3x+2y \\ x-y \\ x+4y \end{bmatrix} $
@@ -8,16 +8,14 @@ Determine if the following linear maps are injective (one-to-one) and/or surject
 
 \begin{solution}
 \begin{enumerate}[(a)]
-\item $$\RREF \left( \begin{bmatrix} 3 & 2 \\ 1 & -1 \\ 1 & 4 \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$$
-Since all columns are pivot columns, $S$ is injective.  Since there is a zero row, $S$ is not surjective.
-\item $$\RREF\left( \begin{bmatrix} 1 &  1 & 1 \\ 0  & 2 & 3 \\ 1  & -1 & -2 \end{bmatrix} \right) = \begin{bmatrix} 1 &  0 & -\frac{1}{2} \\ 0  & 1 & \frac{3}{2} \\ 0& 0 & 0  \end{bmatrix}$$
-Since there is a nonpivot column, $T$ is not injective.  Since there is a zero row, $T$ is not surjective.
+\item  $S$ is injective but not surjective.
+\item $T$ is neither injective nor surjective.
 \end{enumerate}
 \end{solution}
 
 
 
-\begin{problem}{A3}
+\begin{problem}{A4}
 Determine if each of the following linear transformations is injective (one-to-one) and/or surjective (onto).
 \begin{enumerate}[(a)]
 \item $S: \IR^3 \rightarrow \IR^3$ given by $T\left(\begin{bmatrix} x \\ y \\ z  \end{bmatrix} \right) = \begin{bmatrix} x+y+z \\ 2y+3z \\ x-y-2z \end{bmatrix} $
@@ -26,16 +24,14 @@ Determine if each of the following linear transformations is injective (one-to-o
 \end{problem}
 \begin{solution}
 \begin{enumerate}[(a)]
-\item $$\RREF\left( \begin{bmatrix} 1 &  1 & 1 \\ 0  & 2 & 3 \\ 1  & -1 & -2 \end{bmatrix} \right) = \begin{bmatrix} 1 &  0 & -\frac{1}{2} \\ 0  & 1 & \frac{3}{2} \\ 0& 0 & 0  \end{bmatrix}$$
-Since there is a nonpivot column, $S$ is not injective.  Since there is a zero row, $S$ is not surjective.
-\item $$\RREF \left( \begin{bmatrix} 3 & 2 \\ 1 & -1 \\ 1 & 4 \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$$
-Since all columns are pivot columns, $T$ is injective.  Since there is a zero row, $T$ is not surjective.
+\item $S$ is neither injective nor surjective.
+\item $T$ is injective but not surjective.
 \end{enumerate}
 \end{solution}
 
 
 
-\begin{problem}{A3}
+\begin{problem}{A4}
 Determine if each of the following linear transformations is injective (one-to-one) and/or surjective (onto).
 \begin{enumerate}[(a)]
 \item $S: \IR^2 \rightarrow \IR^2$ given by the standard matrix $\begin{bmatrix} 0 & 1 \\ -1 & 0 \end{bmatrix}$.
@@ -44,15 +40,13 @@ Determine if each of the following linear transformations is injective (one-to-o
 \end{problem}
 \begin{solution}
 \begin{enumerate}[(a)]
-\item $ \RREF\begin{bmatrix} 0 & 1 \\ -1 & 0 \end{bmatrix}=\begin{bmatrix}1 & 0 \\ 0 & 1 \end{bmatrix}$.  Since each column is a pivot column, $S$ is injective.  Since there is no zero row, $S$ is surjective.
-\item Since $\dim \IR^4 > \dim \IR^3$, $T$ is not injective.
-$$\RREF\left(\begin{bmatrix} 2 & 3 & -1 & -2 \\ 0 & 1 & 3 & 1 \\ 2 & 1 & -7 & -4 \end{bmatrix}\right) = \begin{bmatrix} 1 & 0 & -5 & -\frac{5}{2} \\ 0 & 1 & 3 & 1 \\ 0 & 0 & 0 & 0\end{bmatrix}$$
-Since there are only two pivot columns, $T$ is not surjective.
+\item $S$ is both injective and surjective.
+\item $T$ is neither injective nor surjective.
 \end{enumerate}
 \end{solution}
 
 
-\begin{problem}{A3}
+\begin{problem}{A4}
 Determine if each of the following linear transformations is injective (one-to-one) and/or surjective (onto).
 \begin{enumerate}[(a)]
 \item $S: \IR^2 \rightarrow \IR^2$ given by the standard matrix $\begin{bmatrix} 0 & 1 \\ -1 & 0 \end{bmatrix}$.
@@ -61,14 +55,12 @@ Determine if each of the following linear transformations is injective (one-to-o
 \end{problem}
 \begin{solution}
 \begin{enumerate}[(a)]
-\item $ \RREF\begin{bmatrix} 0 & 1 \\ -1 & 0 \end{bmatrix}=\begin{bmatrix}1 & 0 \\ 0 & 1 \end{bmatrix}$.  Since each column is a pivot column, $S$ is injective.  Since there is no zero row, $S$ is surjective.
-\item Since $\dim \IR^4 > \dim \IR^3$, $T$ is not injective.
-$$\RREF\left(\begin{bmatrix} 2 & 3 & -1 & -2 \\ 0 & 1 & 3 & 1 \\ 2 & 1 & -7 & -4 \end{bmatrix}\right) = \begin{bmatrix} 1 & 0 & 0 & -\frac{5}{2} \\ 0 & 1 & 0 & 1 \\ 0 & 0 & 1 & 0\end{bmatrix}$$
-Since there are no zero rows, $T$ is surjective.
+\item $S$ is both injective and surjective.
+\item $T$ is not injective but \(T\) is surjective.
 \end{enumerate}
 \end{solution}
 
-\begin{problem}{A3}
+\begin{problem}{A4}
 Determine if each of the following linear transformations is injective (one-to-one) and/or surjective (onto).
 \begin{enumerate}[(a)]
 \item $S: \IR^2 \rightarrow \IR^4$ given by the standard matrix $\begin{bmatrix} 2 & 1 \\ 1 & 2 \\ 0 & 1 \\ 3 & -3 \end{bmatrix}$.
@@ -77,14 +69,12 @@ Determine if each of the following linear transformations is injective (one-to-o
 \end{problem}
 \begin{solution}
 \begin{enumerate}[(a)]
-\item $ \begin{bmatrix} 2 & 1 \\ 1 & 2 \\ 0 & 1 \\ 3 & -3 \end{bmatrix}=\begin{bmatrix}1 & 0 \\ 0 & 1 \\ 0 & 0 \\ 0 & 0  \end{bmatrix}$.  Since each column is a pivot column, $S$ is injective.  Since there a no zero row, $S$ is not surjective.
-\item Since $\dim \IR^4 > \dim \IR^3$, $T$ is not injective.
-$$\RREF\left(\begin{bmatrix} 2 & 3 & -1 & 1 \\ -1 & 1 & 1 & 1 \\ 4 & 11 & -1 & 5 \end{bmatrix}\right) = \begin{bmatrix} 1 & 0  & -\frac{4}{5} & -\frac{2}{5} \\ 0 & 1 & \frac{1}{5} & \frac{3}{5} \\ 0 & 0 & 0 & 0 \end{bmatrix}$$
-Since there is a zero row, $T$ is not surjective.
+\item $S$ is injective but not surjective.
+\item $T$ is neither injective nor surjective.
 \end{enumerate}
 \end{solution}
 
-\begin{problem}{A3}
+\begin{problem}{A4}
 Determine if each of the following linear transformations is injective (one-to-one) and/or surjective (onto).
 \begin{enumerate}[(a)]
 \item $S: \IR^2 \rightarrow \IR^4$ given by the standard matrix $\begin{bmatrix} 2 & 1 \\ 1 & 2 \\ 0 & 1 \\ 3 & -3 \end{bmatrix}$.
@@ -93,14 +83,12 @@ Determine if each of the following linear transformations is injective (one-to-o
 \end{problem}
 \begin{solution}
 \begin{enumerate}[(a)]
-\item $ \begin{bmatrix} 2 & 1 \\ 1 & 2 \\ 0 & 1 \\ 3 & -3 \end{bmatrix}=\begin{bmatrix}1 & 0 \\ 0 & 1 \\ 0 & 0 \\ 0 & 0  \end{bmatrix}$.  Since each column is a pivot column, $S$ is injective.  Since there a no zero row, $S$ is not surjective.
-\item Since $\dim \IR^4 > \dim \IR^3$, $T$ is not injective.
-$$\RREF\left(\begin{bmatrix} 2 & 3 & -1 & 1 \\ -1 & 1 & 1 & 1 \\ 4 & 7 & -1 & 5 \end{bmatrix}\right) = \begin{bmatrix} 1 & 0  & 0 & 2 \\ 0 & 1 & 0 & 0  \\ 0 & 0 & 1 & 3 \end{bmatrix}$$
-Since there is not a zero row, $T$ is surjective.
+\item $S$ is injective but  not surjective.
+\item $T$ is not injective, but \(T\) is surjective.
 \end{enumerate}
 \end{solution}
 
-\begin{problem}{A3}
+\begin{problem}{A4}
 Determine if each of the following linear transformations is injective (one-to-one) and/or surjective (onto).
 \begin{enumerate}[(a)]
 \item
@@ -134,31 +122,13 @@ Determine if each of the following linear transformations is injective (one-to-o
 \begin{solution}
 \begin{enumerate}[(a)]
 \item
-  \(\RREF\begin{bmatrix}
-    2 & 1 \\
-    1 & 2 \\
-    0 & 1
-  \end{bmatrix}=\begin{bmatrix}
-    1 & 0 \\
-    0 & 1 \\
-    0 & 0
-  \end{bmatrix}\).
-  The map is injective since every column has a pivot, but is not surjective
-  because there is a row without a pivot.
+\(S\) is injective but not surjective.
 \item
-  \(\RREF\begin{bmatrix}
-    2 & 1 & 1 \\
-    2 & 0 & 1
-  \end{bmatrix}=\begin{bmatrix}
-    1 & 0 & 1/2 \\
-    0 & 1 & 0 
-  \end{bmatrix}\).
-  The map is not injective since there is a column without a pivot,
-  but it is surjective because every row has a pivot.
+\(T\) is not injective, but it is surjective.
 \end{enumerate}
 \end{solution}
 
-\begin{problem}{A3}
+\begin{problem}{A4}
 Determine if each of the following linear transformations is injective (one-to-one) and/or surjective (onto).
 \begin{enumerate}[(a)]
 \item
@@ -205,28 +175,8 @@ Determine if each of the following linear transformations is injective (one-to-o
 \begin{solution}
 \begin{enumerate}[(a)]
 \item
-  \(\RREF\begin{bmatrix}
-    2 & 1 & 0 & 3 \\
-    1 & 2 & -1 & 2\\
-    0 & 1 & 0 & 1
-  \end{bmatrix}=\begin{bmatrix}
-    1 & 0 & 0 & 1\\
-    0 & 1 & 0 & 1\\
-    0 & 0 & 1 & 1
-  \end{bmatrix}\).
-  The map is not injective since it has a column without pivot,
-  but it is surjective because every row has a pivot.
+\(S\) is not injective, but it is surjective.
 \item
-  \(\RREF\begin{bmatrix}
-    2 & 1 & 1 \\
-    2 & 0 & 2 \\
-    1 & 4 & -3
-  \end{bmatrix}=\begin{bmatrix}
-    1 & 0 & 1 \\
-    0 & 1 & -1 \\
-    0 & 0 & 0
-  \end{bmatrix}\).
-  The map is not injective since there is a column without a pivot,
-  and it is not surjective because there is a row without a pivot.
+\(T\) is neither injective nor surjective.
 \end{enumerate}
 \end{solution}
