--- a/tex/modules/5-M/exercises/M3.tex
+++ b/tex/modules/5-M/exercises/M3.tex
@@ -1,66 +1,120 @@
 \begin{problem}{M3}
-Determine if the matrix $\begin{bmatrix} 1 & 3 & 3 & 7 \\ 1 & 3 & -1 & -1 \\ 2 & 6 & 3 & 8 \\ 1 & 3 & -2 & -3 \end{bmatrix}$ is invertible.
+Show how to find the inverse of the matrix $\begin{bmatrix} 8 & 5 & 3 & 0 \\ 3 & 2 & 1 & 1 \\ 5 & -3 & 1 & -2 \\ -1 & 2 & 0 & 1\end{bmatrix} $.
 \end{problem}
 \begin{solution}
-The second column is a multiple of the first, so it is not invertible.
+The inverse is $\begin{bmatrix} 1 & 2 & -5 & 12 \\  1 & 1 & -4 & -9 \\  -4 & -7 & 20 & 47 \\-1 & 0 & 3 & 7 \end{bmatrix}$.
+\end{solution}
+
+
+\begin{problem}{M3}
+Compute the inverse of the matrix $\begin{bmatrix} 1 & 2 & 3 & 0 \\ 0 & -1 & 4 & -2 \\ 0 & 0 & 1 & 3 \\ 0 & 0 & 0 & 1 \end{bmatrix}$.
+\end{problem}
+\begin{solution}
+The inverse is $\begin{bmatrix}  1 & 2 & -11 & 37 \\ 0 & -1 & 4 & -14 \\  0 & 0 & 1 & -3 \\ 0 & 0 & 0 & 1 \end{bmatrix}$
+\end{solution}
+
+
+\begin{problem}{M3}
+  Show how to find the inverse of the matrix $\begin{bmatrix} 6 & 0 & 1 \\ -14 & 3 & -4 \\ -23 & 4 & -6\end{bmatrix}$.
+\end{problem}
+\begin{solution}
+$$\begin{bmatrix} 6 & 0 & 1 \\ -14 & 3 & -4 \\ -23 & 4 & -6\end{bmatrix}^{-1} = \begin{bmatrix} -2 & 4 & -3 \\ 8 & -13 & 10 \\ 13 & -24 & 18 \end{bmatrix}$$
+\end{solution}
+
+\begin{problem}{M3}
+Show how to find the inverse of the matrix $\begin{bmatrix} 3 & -1 & 0  \\ 2 & 1 & 1  \\ 0 & 1 & 1   \end{bmatrix}$.
+\end{problem}
+\begin{solution}
+$$\begin{bmatrix} 3 & -1 & 0  \\ 2 & 1 & 1  \\ 0 & 1 & 1   \end{bmatrix}^{-1} = \begin{bmatrix} 0 & \frac{1}{2} & -\frac{1}{2} \\ -1 & \frac{3}{2} & -\frac{3}{2} \\ 1 & -\frac{3}{2} & \frac{5}{2}\end{bmatrix}$$
 \end{solution}
 
 
 
 \begin{problem}{M3}
-Determine if the matrix $\begin{bmatrix}-3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3\end{bmatrix}$ is invertible.
+  Show how to find the inverse of the matrix
+  \(\begin{bmatrix}
+    4 & -1 & -8  \\
+    2 & 1 & 3  \\
+    1 & 1 & 4
+  \end{bmatrix}\).
 \end{problem}
 \begin{solution}
-$$\RREF \begin{bmatrix}-3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3\end{bmatrix} = \begin{bmatrix} 1 & 0 & \frac{1}{2} \\ 0 & 1 & \frac{3}{2} \\ 0 & 0 & 0 \end{bmatrix}$$
-Since it is not equivalent to the identity matrix, it is not invertible.
+The inverse is
+\(\begin{bmatrix}
+  1 & -4 & 5  \\
+  -5 & 24 & -28  \\
+  1 & -5 & 6
+\end{bmatrix}\).
 \end{solution}
 
 
 \begin{problem}{M3}
-  Determine if the matrix $\begin{bmatrix} 1 & 3 & -1 \\ 2 & 7 & 0 \\ -1 & -1 & 5 \end{bmatrix}$ is invertible.
+  Show how to find the inverse of the matrix
+  \(\begin{bmatrix}
+    1 & -4 & 5  \\
+    -5 & 24 & -28  \\
+    1 & -5 & 6
+  \end{bmatrix}\).
 \end{problem}
 \begin{solution}
-$$\RREF\begin{bmatrix} 1 & 3 & -1 \\ 2 & 7 & 0 \\ -1 & -1 & 5 \end{bmatrix} =\begin{bmatrix} 1 & 0 & -7 \\ 0 & 1 & 2 \\ 0 & 0 & 0 \end{bmatrix}$$
-Since it is not equivalent to the identity matrix, it is not invertible.
+The inverse is
+\(\begin{bmatrix}
+  4 & -1 & -8  \\
+  2 & 1 & 3  \\
+  1 & 1 & 4
+\end{bmatrix}\).
 \end{solution}
 
 
 \begin{problem}{M3}
-Determine if the matrix $\begin{bmatrix} 3 & -1 & 0 & 4 \\ 2 & 1 & 1 & -1 \\ 0 & 1 & 1 & 3 \\ 1 & -2 & 0 & 0 \end{bmatrix}$ is invertible.
+  Show how to find the inverse of the matrix
+  \(\begin{bmatrix}
+    3 & 1 & 3  \\
+    2 & -1 & -6  \\
+    1 & 1 & 4
+  \end{bmatrix}\).
 \end{problem}
 \begin{solution}
-This matrix is row equivalent to the identity matrix, so it is invertible.
-\end{solution}
-
-\begin{problem}{M3}
-Determine if the matrix $\begin{bmatrix} 3 & -1 & 0 & 4 \\ 2 & 1 & 1 & 1 \\ 0 & 1 & 1 & -1 \\ 1 & -2 & 0 & 3 \end{bmatrix}$ is invertible.
-\end{problem}
-\begin{solution}
-$$\RREF \begin{bmatrix} 3 & -1 & 0 & 4 \\ 2 & 1 & 1 & 1 \\ 0 & 1 & 1 & -1 \\ 1 & -2 & 0 & 3 \end{bmatrix} = \begin{bmatrix} 1 & 0 & 0 & 1 \\ 0 & 1 & 0 & -1 \\ 0 & 0 & 1 & 0 \\ 0 & 0 & 0 & 0 \end{bmatrix}$$
-This matrix is not row equivalent to the identity matrix, so it is not invertible.
-\end{solution}
-
-
-\begin{problem}{M3}
-Determine if the matrix $\begin{bmatrix} 3 & -1 & 0  \\ 2 & 1 & 1  \\ 0 & 1 & 1   \end{bmatrix}$ is invertible.
-\end{problem}
-\begin{solution}
-It is row equivalent to the identity matrix, so it is invertible.
+The inverse is
+\(\begin{bmatrix}
+  2 & -1 & -3  \\
+  -14 & 9 & 24  \\
+  3 & -2 & -5
+\end{bmatrix}\).
 \end{solution}
 
 
 \begin{problem}{M3}
-Determine if the matrix $\begin{bmatrix} 2 & 1 & 0 & 3 \\ 1 & -1 & 3 & 1 \\ 3 & 2 & -1 & 7 \\ 4 & 1 & 2 & 0 \end{bmatrix}$ is invertible.
+  Show how to find the inverse of the matrix
+  \(\begin{bmatrix}
+    3 & 1 & 3  \\
+    2 & -1 & -6  \\
+    1 & 1 & 4
+  \end{bmatrix}\).
 \end{problem}
 \begin{solution}
-$$\RREF \begin{bmatrix} 2 & 1 & 0 & 3 \\ 1 & -1 & 3 & 1 \\ 3 & 2 & -1 & 7 \\ 4 & 1 & 2 & 0 \end{bmatrix}=\begin{bmatrix} 1 & 0 & 1 & 0 \\ 0 & 1 & -2 & 0 \\ 0 & 0 & 0 & 1 \\ 0 & 0 & 0 & 0 \end{bmatrix}$$
-Since it is not row equivalent to the identity matrix, it is not invertible.
+The inverse is
+\(\begin{bmatrix}
+  2 & -1 & -3  \\
+  -14 & 9 & 24  \\
+  3 & -2 & -5
+\end{bmatrix}\).
 \end{solution}
 
+
 \begin{problem}{M3}
-Determine if the matrix $\begin{bmatrix} 2 & 1 & 0 & 3 \\ 1 & -1 & 0 & 1 \\ 3 & 2 & -1 & 7 \\ 4 & 1 & 2 & 0 \end{bmatrix}$ is invertible.
+  Show how to find the inverse of the matrix
+  \(\begin{bmatrix}
+    2 & -1 & -3  \\
+    -14 & 9 & 24  \\
+    3 & -2 & -5
+  \end{bmatrix}\).
 \end{problem}
 \begin{solution}
-$$\RREF \begin{bmatrix} 2 & 1 & 0 & 3 \\ 1 & -1 & 0 & 1 \\ 3 & 2 & -1 & 7 \\ 4 & 1 & 2 & 0 \end{bmatrix}=\begin{bmatrix} 1 & 0 & 0 & 0 \\ 0 & 1 & 0 & 0 \\ 0 & 0 & 1 & 0 \\ 0 & 0 & 0 & 1 \end{bmatrix}$$
-Since it is row equivalent to the identity matrix, it is  invertible.
+The inverse is
+  \(\begin{bmatrix}
+    3 & 1 & 3  \\
+    2 & -1 & -6  \\
+    1 & 1 & 4
+  \end{bmatrix}\).
 \end{solution}
