--- a/tex/tbil-la.sty
+++ b/tex/tbil-la.sty
@@ -81,55 +81,21 @@
 \newcommand{\vectorSpaceProperties}{
 \begin{multicols}{2}
 \begin{itemize}
-  \item \(\vect u\oplus(\vect v\oplus\vect w)=
+  \item \textbf{Addition is associative:} \(\vect u\oplus(\vect v\oplus\vect w)=
         (\vect u\oplus\vect v)\oplus\vect w\).
-  \item \(\vect u\oplus\vect v=
+  \item \textbf{Addition is commutative:} \(\vect u\oplus\vect v=
         \vect v\oplus\vect u\).
-  \item There exists some \(\vect z\)
+  \item \textbf{Additive identity exists:} There exists some \(\vect z\)
         where \(\vect v\oplus\vect z=\vect v\).
-  \item There exists some \(-\vect v\)
+  \item \textbf{Additive inverses exist:} There exists some \(-\vect v\)
         where \(\vect v\oplus(-\vect v)=\vect z\).
   \columnbreak
-  \item \(a\odot(b\odot\vect v)=(ab)\odot\vect v\).
-  \item \(1\odot\vect v=\vect v\).
-  \item \(a\odot(\vect u\oplus\vect v)=a\odot\vect u\oplus a\odot\vect v\).
-  \item \((a+ b)\odot\vect v=a\vect v\oplus b\vect v\).
+  \item \textbf{Scalar multiplication is associative:} \(a\odot(b\odot\vect v)=(ab)\odot\vect v\).
+  \item \textbf{Scalar multiplication identity exists:} \(1\odot\vect v=\vect v\).
+  \item \textbf{Scalar mult. distributes over vector addition:} \(a\odot(\vect u\oplus\vect v)=a\odot\vect u\oplus a\odot\vect v\).
+  \item \textbf{Scalar mult. distributes over scalar addition:} \((a+ b)\odot\vect v=a\vect v\oplus b\vect v\).
 \end{itemize}
 \end{multicols}
 }
 
-\newcommand{\vectorSpacePropertiesO}{
-\begin{multicols}{2}
-\begin{itemize}
-  \item \textbf{Addition associativity.}
 
-        \(\vect u\oplus(\vect v\oplus\vect w)=
-        (\vect u\oplus\vect v)\oplus\vect w\).
-  \item \textbf{Addition commutivity.}
-
-        \(\vect u\oplus\vect v=
-        \vect v\oplus\vect u\).
-  \item \textbf{Addition identity.}
-
-        There exists some \(\vect z\)
-        where \(\vect v\oplus\vect z=\vect v\).
-  \item \textbf{Addition inverse.}
-
-        There exists some \(-\vect v\)
-        where \(\vect v\oplus(-\vect v)=\vect z\).
-  \item \textbf{Scalar multiplication associativity.}
-
-        \(a\odot(b\odot\vect v)=(ab)\odot\vect v\).
-  \item \textbf{Scalar multiplication identity.}
-
-        \(1\odot\vect v=\vect v\).
-  \item \textbf{Scalar distribution.}
-
-        \(a\odot(\vect u\oplus\vect v)=
-        (a\odot\vect u)\oplus (a\odot\vect v)\).
-  \item \textbf{Vector distribution.}
-
-        \((a+b)\odot\vect v=(a\odot\vect v)\oplus (b\odot\vect v)\).
-\end{itemize}
-\end{multicols}
-}
