--- a/tex/modules/2-V/exercises/V10.tex
+++ b/tex/modules/2-V/exercises/V10.tex
@@ -8,10 +8,7 @@ x+3y+3z+7w &= 0 \\
 \end{align*}
 \end{problem}
 \begin{solution}
-\[\RREF\left(\begin{bmatrix} 1 & 3 & 3 & 7 \\ 1 & 3 & -1 & -1 \\ 2 & 6 & 3 & 8 \\ 1 & 3 & -2 & -3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 3 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \\ 0 & 0 & 0 & 0 \end{bmatrix}\]
-Then the solution space is
-\[\left\{ \begin{bmatrix} -3a-b \\ a \\ -2b \\ b \end{bmatrix}\ \big|\ a,b \in \IR\right\}\]
-So a basis for the solution space is \[\left\{ \begin{bmatrix} 3 \\ -1 \\ 0 \\ 0 \end{bmatrix} , \begin{bmatrix} 1\\0 \\ 2 \\ -1 \end{bmatrix} \right\}\]
+A basis for the solution space is \[\left\{ \begin{bmatrix} 3 \\ -1 \\ 0 \\ 0 \end{bmatrix} , \begin{bmatrix} 1\\0 \\ 2 \\ -1 \end{bmatrix} \right\}\]
 \end{solution}
 
 
@@ -25,10 +22,7 @@ x+2y+3z+w &= 0 \\
 \end{align*}
 \end{problem}
 \begin{solution}
-\[\RREF \left(\begin{bmatrix} 1 & -2 & 3 & 1 \\ 3 & -1 & 1 & 1 \\ 2 & -3 & -2 & 0 \\ -1 & 0 & 2 & 5 \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & 0 & -1 \\ 0 & 1 & 0 & -2 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0\end{bmatrix}\]
-Then the solution space is
-\[\left\{ \begin{bmatrix} a \\ 2a \\ -2a \\ a \end{bmatrix} \bigg |\ a \in \IR \right\}\]
-So a basis for the solution space is \(\left\{\begin{bmatrix} 1 \\ 2 \\ -2 \\ 1\end{bmatrix} \right\}\).
+A basis for the solution space is \(\left\{\begin{bmatrix} 1 \\ 2 \\ -2 \\ 1\end{bmatrix} \right\}\).
 \end{solution}
 
 
@@ -41,10 +35,7 @@ x+2y+3z+w &= 0 \\
 \end{align*}
 \end{problem}
 \begin{solution}
-\[\RREF \left(\begin{bmatrix} 1 & -2 & 3 & 1 \\ 3 & -1 & 1 & 1 \\ 2 & -3 & -2 & 0  \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & \frac{5}{7} & \frac{3}{7} \\ 0 & 1 & \frac{8}{7} & \frac{2}{7} \\ 0 & 0 & 0 & 0\end{bmatrix}\]
-Then the solution space is
-\[\left\{ \begin{bmatrix} -\frac{5}{7}a-\frac{3}{7}b \\ -\frac{8}{7}a-\frac{2}{7}b \\ a \\ b \end{bmatrix} \bigg |\ a,b \in \IR \right\}\]
-So a basis for the solution space is \(\left\{\begin{bmatrix} -\frac{5}{7} \\ -\frac{8}{7} \\ 1 \\ 0\end{bmatrix}, \begin{bmatrix} - \frac{3}{7} \\ -\frac{2}{7} \\ 0 \\ 1 \end{bmatrix} \right\}\), or \(\left\{\begin{bmatrix} 5 \\ 8 \\ -7 \\ 0 \end{bmatrix}, \begin{bmatrix} 3 \\ 2 \\ 0 \\ -7 \end{bmatrix}\right\}\).
+A basis for the solution space is \(\left\{\begin{bmatrix} -\frac{5}{7} \\ -\frac{8}{7} \\ 1 \\ 0\end{bmatrix}, \begin{bmatrix} - \frac{3}{7} \\ -\frac{2}{7} \\ 0 \\ 1 \end{bmatrix} \right\}\), or \(\left\{\begin{bmatrix} 5 \\ 8 \\ -7 \\ 0 \end{bmatrix}, \begin{bmatrix} 3 \\ 2 \\ 0 \\ -7 \end{bmatrix}\right\}\).
 \end{solution}
 
 \begin{problem}{V10}
@@ -57,10 +48,7 @@ x -y -z &= 0
 \end{align*}
 \end{problem}
 \begin{solution}
-\[\RREF \left(\begin{bmatrix} 1 & 2 & -3 \\ 2 & 1 & -4 \\ 0 & 3 & -2 \\ 1 & -1 & -1 \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & -\frac{5}{3} \\ 0 & 1 & -\frac{2}{3} \\ 0 & 0 & 0 \\ 0 & 0 & 0 \end{bmatrix}\]
-Then the solution space is
-\[\left\{ \begin{bmatrix} \frac{5}{3}a \\ \frac{2}{3}a \\ a \end{bmatrix} \bigg|\ a \in \IR \right\}\]
-So a basis is \(\left\{ \begin{bmatrix} \frac{5}{3} \\ \frac{2}{3} \\ 1 \end{bmatrix} \right\}\) or \(\left\{ \begin{bmatrix} 5 \\  2 \\ 3 \end{bmatrix} \right\}\).
+A basis is \(\left\{ \begin{bmatrix} \frac{5}{3} \\ \frac{2}{3} \\ 1 \end{bmatrix} \right\}\) or \(\left\{ \begin{bmatrix} 5 \\  2 \\ 3 \end{bmatrix} \right\}\).
 \end{solution}
 
 \begin{problem}{V10}
@@ -71,18 +59,7 @@ x_1+x_2-x_3+5x_4 &= 0
 \end{align*}
 \end{problem}
 \begin{solution}
-Let \(A =
-  \begin{bmatrix}[cccc|c]
-    2 & 3 & -5 & 14 & 0 \\
-    1 & 1 & -1 & 5 & 0
-  \end{bmatrix}
-\), so \(\RREF A =
-  \begin{bmatrix}[cccc|c]
-    1 & 0 & 2 & 1 & 0 \\
-    0 & 1 & -3 & 4 & 0 \\
-  \end{bmatrix}
-\).
-It follows that the basis for the solution space is given by \(\left\{
+A basis for the solution space is  \(\left\{
   \begin{bmatrix}
     - 2 \\
     3 \\
@@ -107,20 +84,7 @@ Find a basis for the solution space to the homogeneous system of equations
 \end{align*}
 \end{problem}
 \begin{solution}
-Let \(A =
-  \begin{bmatrix}[cccc|c]
-    4 & 4 & 3 & -6 & 0 \\
-    0 & 0 & -2 & -4 & 0 \\
-    2 & 2 & 1 & -4 & 0
-  \end{bmatrix}
-\), so \(\RREF A =
-  \begin{bmatrix}[cccc|c]
-    1 & 1 & 0 & -3 & 0 \\
-    0 & 0 & 1 & 2 & 0 \\
-    0 & 0 & 0 & 0 & 0
-  \end{bmatrix}
-\).
-It follows that the basis for the solution space is given by \(\left\{
+A basis for the solution space is \(\left\{
   \begin{bmatrix}
     -1 \\
     1 \\
@@ -145,18 +109,7 @@ x+y+z &= 0
 \end{align*}
 \end{problem}
 \begin{solution}
-Let \(A =
-  \begin{bmatrix}[ccc|c]
-    3 & 2 & 1 & 0 \\
-    1 & 1 & 1 & 0
-  \end{bmatrix}
-\), so \(\RREF A =
-  \begin{bmatrix}[ccc|c]
-    1 & 0 & -1 & 0 \\
-    0 & 1 & 2 & 0
-  \end{bmatrix}
-\).
-It follows that the basis for the solution space is given by \(\left\{
+A basis for the solution space is  \(\left\{
   \begin{bmatrix}
     1 \\
     -2 \\
@@ -175,20 +128,7 @@ given by
 \end{align*}
 \end{problem}
 \begin{solution}
-Let \(A =
-  \begin{bmatrix}[cccc|c]
-    2 & -2 & 6 & -1 & 0 \\
-    3 & 0 & 6 & 1 & 0 \\
-    -4 & 1 & -9 & 2 & 0
-  \end{bmatrix}
-\), so \(\RREF A =
-  \begin{bmatrix}[cccc|c]
-    1 & 0 & 2 & 0 & 0 \\
-    0 & 1 & -1 & 0 & 0 \\
-    0 & 0 & 0 & 1 & 0
-  \end{bmatrix}
-\).
-It follows that the basis for the solution space is given by \(\left\{
+A basis for the solution space is  \(\left\{
   \begin{bmatrix}
     -2 \\
     1 \\
