--- a/tex/modules/2-V/exercises/V2.tex
+++ b/tex/modules/2-V/exercises/V2.tex
@@ -2,8 +2,7 @@
 Determine if \(\begin{bmatrix}0 \\ -1 \\ 2 \\ 6 \end{bmatrix}\) can be written as a linear combination of the vectors \(\begin{bmatrix} 3 \\ -1 \\ -1 \\ 0 \end{bmatrix}\) and \(\begin{bmatrix} -1 \\ 0 \\ 1 \\ 2 \end{bmatrix}\).
 \end{problem}
 \begin{solution}
-\[\RREF\left(\left[\begin{array}{cc|c} 3 & -1 & 0 \\ -1 & 0 & -1 \\ -1 & 1 & 2 \\ 0 & 2 & 6\end{array} \right] \right)= \left[ \begin{array}{cc|c} 1 & 0 & 1 \\ 0 & 1 & 3 \\ 0 & 0 & 0 \\ 0 & 0 & 0 \end{array} \right]\]
-Since this system has a solution, \(\begin{bmatrix}0 \\ -1 \\ 2 \\ 6 \end{bmatrix}\) can be written as a linear combination of the vectors \(\begin{bmatrix} 3 \\ -1 \\ -1 \\ 0 \end{bmatrix}\) and \(\begin{bmatrix} -1 \\ 0 \\ 1 \\ 2 \end{bmatrix}\), namely
+\(\begin{bmatrix}0 \\ -1 \\ 2 \\ 6 \end{bmatrix}\) can be written as a linear combination of the vectors \(\begin{bmatrix} 3 \\ -1 \\ -1 \\ 0 \end{bmatrix}\) and \(\begin{bmatrix} -1 \\ 0 \\ 1 \\ 2 \end{bmatrix}\), namely
 \[\begin{bmatrix}0 \\ -1 \\ 2 \\ 6 \end{bmatrix}=\begin{bmatrix} 3 \\ -1 \\ -1 \\ 0 \end{bmatrix}+3\begin{bmatrix} -1 \\ 0 \\ 1 \\ 2 \end{bmatrix}.\]
 \end{solution}
 
@@ -11,8 +10,7 @@ Since this system has a solution, \(\begin{bmatrix}0 \\ -1 \\ 2 \\ 6 \end{bmatri
 Determine if \(\begin{bmatrix} 0 \\ 1 \\ -2 \\ 1 \end{bmatrix}\) can be written as a linear combination of the vectors \(\begin{bmatrix} 5 \\ 2 \\ -3 \\ 2 \end{bmatrix}\), \(\begin{bmatrix} 3 \\ 1 \\ 1 \\ 0 \end{bmatrix}\), and \(\begin{bmatrix} 8 \\ 3 \\ 5 \\ -1 \end{bmatrix}\).
 \end{problem}
 \begin{solution}
-\[\RREF \left(\begin{bmatrix}[ccc|c] 8 & 5 & 3 & 0\\ 3 & 2 & 1 & 1 \\ 5 & -3 & 1 & -2  \\ -1 & 2 & 0 & 1 \end{bmatrix} \right) = \begin{bmatrix}[ccc|c] 1 & 0 & 0 & 0  \\ 0 &  1 & 0 & 0  \\ 0 & 0 & 1 & 0 \\ 0 & 0 & 0 & 1  \end{bmatrix}\]
-The system has no solution, so \(\begin{bmatrix} 0 \\ 1 \\ -2 \\ 1 \end{bmatrix}\) is not a linear combination of the three other vectors.
+\(\begin{bmatrix} 0 \\ 1 \\ -2 \\ 1 \end{bmatrix}\) is not a linear combination of the three other vectors.
 \end{solution}
 
 
@@ -20,8 +18,7 @@ The system has no solution, so \(\begin{bmatrix} 0 \\ 1 \\ -2 \\ 1 \end{bmatrix}
 Determine if  \(\begin{bmatrix} 0 \\ 0 \\ 2 \end{bmatrix}\) can be written as a linear combination of the vectors \(\begin{bmatrix} -1 \\ -9 \\ 15 \end{bmatrix}\) and \(\begin{bmatrix} 1 \\ 5 \\ -5 \end{bmatrix}\).
 \end{problem}
 \begin{solution}
-\[\RREF\left(\begin{bmatrix}[cc|c] -1 & 1 & 0 \\ -9 & 5 & 0 \\ 15 & -5 & 2 \end{bmatrix} \right) = \begin{bmatrix}[cc|c] 1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\]
-Since this system has no solution, \(\begin{bmatrix} 0 \\ 0 \\ 2 \end{bmatrix}\) cannot be written as a linear combination of the vectors \(\begin{bmatrix} -1 \\ -9 \\ 15 \end{bmatrix}\) and \(\begin{bmatrix} 1 \\ 5 \\ -5 \end{bmatrix}\).
+\(\begin{bmatrix} 0 \\ 0 \\ 2 \end{bmatrix}\) cannot be written as a linear combination of the vectors \(\begin{bmatrix} -1 \\ -9 \\ 15 \end{bmatrix}\) and \(\begin{bmatrix} 1 \\ 5 \\ -5 \end{bmatrix}\).
 \end{solution}
 
 
@@ -29,16 +26,14 @@ Since this system has no solution, \(\begin{bmatrix} 0 \\ 0 \\ 2 \end{bmatrix}\)
 Determine if \(\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}\) is a linear combination of the vectors \(\begin{bmatrix} 2 \\ 3 \\ -1 \end{bmatrix}\), \(\begin{bmatrix} 1 \\ -1 \\ 0 \end{bmatrix}\), and \(\begin{bmatrix} -3 \\ -2 \\ 5 \end{bmatrix}\).
 \end{problem}
 \begin{solution}
-\[\RREF\left( \begin{bmatrix}[ccc|c] 2 & 1 & -3  & 1 \\ 3 & -1 & -2 & 4 \\ -1 & 0 & 5 & 3 \end{bmatrix} \right) = \begin{bmatrix}[ccc|c] 1 & 0 & 0 & 2 \\ 0 & 1 & 0 & 0 \\ 0 & 0 &  1 & 1 \end{bmatrix}\]
-Since this system has a solution,  \(\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}\) is a linear combination of the three vectors.
+\(\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}\) is a linear combination of the three vectors.
 \end{solution}
 
 \begin{problem}{V2} 
 Determine if \(\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}\) is a linear combination of the vectors \(\begin{bmatrix} 3 \\ 0 \\ -1 \end{bmatrix}\), \(\begin{bmatrix} 1 \\ -1 \\ 4 \end{bmatrix}\), and \(\begin{bmatrix} 5 \\ 1 \\  -6 \end{bmatrix}\).
 \end{problem}
 \begin{solution}
-\[\RREF\left(\begin{bmatrix}[ccc|c] 3 & 1 & 5 & 1 \\ 0 & -1 & 1 & 4 \\ -1 & 4 & -6 & 3 \end{bmatrix} \right) = \begin{bmatrix}[ccc|c] 1 & 0 & 2 & 0 \\ 0 & 1 & -1 & 0 \\ 0 & 0 & 0 & 1 \end{bmatrix}\]
-Since the corresponding system has no solutions, \(\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}\) is not a linear combination of the three vectors.
+\(\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}\) is not a linear combination of the three vectors.
 \end{solution}
 
 
@@ -53,26 +48,7 @@ Since the corresponding system has no solutions, \(\begin{bmatrix} 1 \\ 4 \\ 3 \
   \).
 \end{problem}
 \begin{solution}
-  Since
-  \[
-    \RREF\left(
-      \begin{bmatrix}[cc|c]
-        2 & 4 & 0 \\
-        0 & -1 & -1 \\
-        -1 & 4 & 6 \\
-        5 & 3 & -7
-      \end{bmatrix}
-    \right) =
-    \begin{bmatrix}[cc|c]
-      1 & 0 & -2 \\
-      0 & 1 & 1 \\
-      0 & 0 & 0 \\
-      0 & 0 & 0
-    \end{bmatrix}
-  \]
-  does not require a contradiction,
-  \(\begin{bmatrix} 0 \\ -1 \\ 6 \\ -7 \end{bmatrix}\) is
-  a linear combination of the three vectors.
+  \(\begin{bmatrix} 0 \\ -1 \\ 6 \\ -7 \end{bmatrix}\) belongs to the span of the other  two vectors.
 \end{solution}
 
 
@@ -87,26 +63,7 @@ Since the corresponding system has no solutions, \(\begin{bmatrix} 1 \\ 4 \\ 3 \
   \).
 \end{problem}
 \begin{solution}
-  Since
-  \[
-    \RREF\left(
-      \begin{bmatrix}[cc|c]
-        2 & 4 & 4 \\
-        0 & -1 & -1 \\
-        -1 & 4 & 6 \\
-        5 & 3 & -7
-      \end{bmatrix}
-    \right) =
-    \begin{bmatrix}[cc|c]
-      1 & 0 & 0 \\
-      0 & 1 & 0 \\
-      0 & 0 & 1 \\
-      0 & 0 & 0
-    \end{bmatrix}
-  \]
-  requires the contradiction \(0=1\),
-  \(\begin{bmatrix} 4 \\ -1 \\ 6 \\ -7 \end{bmatrix}\) is
-  not a linear combination of the three vectors.
+  \(\begin{bmatrix} 4 \\ -1 \\ 6 \\ -7 \end{bmatrix}\) does not belong to the span of the other two vectors.
 \end{solution}
 
 
@@ -122,22 +79,6 @@ Since the corresponding system has no solutions, \(\begin{bmatrix} 1 \\ 4 \\ 3 \
   \).
 \end{problem}
 \begin{solution}
-  Since
-  \[
-    \RREF\left(
-      \begin{bmatrix}[ccc|c]
-        1 & 2 & 0 & 3 \\
-        2 & 4 & 0 & -2 \\
-        -3 & -6 & 0 & 4
-      \end{bmatrix}
-    \right) =
-    \begin{bmatrix}[ccc|c]
-      1 & 2 & 0 & 0 \\
-      0 & 0 & 0 & 1 \\
-      0 & 0 & 0 & 0
-    \end{bmatrix}
-  \]
-  requires the contradiction \(0=1\),
   \(\begin{bmatrix} 3 \\ -2 \\ 4 \end{bmatrix}\) is
-  not a linear combination of the three vectors.
+  not in the span of the other three vectors.
 \end{solution}
