--- a/tex/modules/2-V/exercises/V5.tex
+++ b/tex/modules/2-V/exercises/V5.tex
@@ -1,26 +1,19 @@
 \begin{problem}{V5}
-Determine if the vectors in the set
+Determine if set of vectors 
 \(\setList{
   \begin{bmatrix} 1 \\ 1 \\ -1 \end{bmatrix},
   \begin{bmatrix} 3 \\ -1 \\ 1 \end{bmatrix},
   \begin{bmatrix} 2 \\ 0 \\ -2 \end{bmatrix}
 }\)
-are linearly dependent or linearly independent.
+is linearly dependent or linearly independent.
 \end{problem}
 \begin{solution}
-\[
-  \RREF\left(
-    \begin{bmatrix} 1 & 3 & 2 \\ 1 & -1 & 0 \\ -1 & 1 & -2 \end{bmatrix}
-  \right)
-    =
-  \begin{bmatrix} 1 & 0 &0 \\ 0 & 1 & 0 \\ 0 & 0 & 1\end{bmatrix}
-\]
-Since each column is a pivot column, the vectors are linearly independent.
+The vectors are linearly independent.
 \end{solution}
 
 
 \begin{problem}{V5}
-Determine if the vectors in the set
+Determine if the set of vectors
 \(
   \setList{
     \begin{bmatrix} 1 \\ 0 \\ 1 \end{bmatrix},
@@ -28,66 +21,53 @@ Determine if the vectors in the set
     \begin{bmatrix} 1 \\ 3 \\ -2 \end{bmatrix}
   }
 \)
-are linearly dependent or linearly independent
+is linearly dependent or linearly independent
 \end{problem}
 \begin{solution}
-\[
-  \RREF\left(
-    \begin{bmatrix} 1 &  1 & 1 \\ 0  & 2 & 3 \\ 1  & -1 & -2 \end{bmatrix}
-  \right)
-    =
-  \begin{bmatrix} 1 &  0 & -\frac{1}{2} \\ 0  & 1 & \frac{3}{2} \\ 0& 0 & 0  \end{bmatrix}
-\]
-Since there is a nonpivot column, the set is linearly dependent.
+The set is linearly dependent.
 \end{solution}
 
 
 \begin{problem}{V5}
-Determine if the vectors in the set \(\setList{ \begin{bmatrix} -3 \\ 8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix}, \begin{bmatrix} 0 \\ -1 \\ 3 \end{bmatrix} }\) are  linearly dependent or linearly independent
+Determine if the set of vectors \(\setList{ \begin{bmatrix} -3 \\ 8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix}, \begin{bmatrix} 0 \\ -1 \\ 3 \end{bmatrix} }\) is  linearly dependent or linearly independent
 \end{problem}
 \begin{solution}
-\[\RREF\left( \begin{bmatrix}-3 & 1 & 0 \\ 8 & 2 & -1 \\ 0 & 2 & 3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\]
-Every column is a pivot column, therefore the set is linearly independent.
+The set is linearly independent.
 \end{solution}
 
 \begin{problem}{V5}
-Determine if the vectors in the set \(\setList{ \begin{bmatrix} -3 \\ -8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix}, \begin{bmatrix} 0 \\ -1 \\ 3 \end{bmatrix} }\) are  linearly dependent or linearly independent
+Determine if the set of vectors \(\setList{ \begin{bmatrix} -3 \\ -8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix}, \begin{bmatrix} 0 \\ -1 \\ 3 \end{bmatrix} }\) is  linearly dependent or linearly independent
 \end{problem}
 \begin{solution}
-\[\RREF\left( \begin{bmatrix}-3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 0 & \frac{1}{2} \\ 0 & 1 & \frac{3}{2} \\ 0 & 0 & 0 \end{bmatrix}\]
-This has a non pivot column, therefore the set is linearly dependent.
+The set is linearly dependent.
 \end{solution}
 
 
 
 \begin{problem}{V5}
-Determine if the vectors in the set \(\setList{\begin{bmatrix} 3 \\ -1 \\ 0 \\ 4 \end{bmatrix}, \begin{bmatrix} 1  \\ 2 \\ -2 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ -8 \\ 6 \\ 5 \end{bmatrix} }\)  are linearly dependent or linearly independent.
+Determine if the set of vectors\(\setList{\begin{bmatrix} 3 \\ -1 \\ 0 \\ 4 \end{bmatrix}, \begin{bmatrix} 1  \\ 2 \\ -2 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ -8 \\ 6 \\ 5 \end{bmatrix} }\)  is linearly dependent or linearly independent.
 \end{problem}
 \begin{solution}
-\[\RREF\left(\begin{bmatrix} 3 & 1 & 3 \\ -1 & 2 & -8 \\ 0 & -2 & 6 \\ 4 & 1 & 5 \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & 2 \\ 0 & 1 & -3 \\ 0 & 0 & 0 \\ 0 & 0 & 0 \end{bmatrix}\]
-Since the reduced row echelon form has a nonpivot column, the vectors are linearly dependent.
+The set is linearly dependent.
 \end{solution}
 
 \begin{problem}{V5}
-Determine if the vectors in the set \(\setList{\begin{bmatrix} 3 \\ -1 \\ 1 \\ 4 \end{bmatrix}, \begin{bmatrix} 1  \\ 2 \\ -2 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ -8 \\ 6 \\ 5 \end{bmatrix} }\)  are linearly dependent or linearly independent.
+Determine if the set of vectors  \(\setList{\begin{bmatrix} 3 \\ -1 \\ 1 \\ 4 \end{bmatrix}, \begin{bmatrix} 1  \\ 2 \\ -2 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ -8 \\ 6 \\ 5 \end{bmatrix} }\)  is linearly dependent or linearly independent.
 \end{problem}
 \begin{solution}
-\[\RREF\left(\begin{bmatrix} 3 & 1 & 3 \\ -1 & 2 & -8 \\ 1 & -2 & 6 \\ 4 & 1 & 5 \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \\ 0 & 0 & 0 \end{bmatrix}\]
-Since the reduced row echelon form has only pivot columns, the vectors are linearly independent.
+The set is linearly independent.
 \end{solution}
 
 \begin{problem}{V5}
-Determine if the vectors in the set \(\setList{ \begin{bmatrix} 2 \\ 1 \\ -1 \\ 2 \end{bmatrix}, \begin{bmatrix} -1 \\ -3 \\ 1 \\ -2 \end{bmatrix}, \begin{bmatrix} 2 \\ -4 \\ 0 \\ 0 \end{bmatrix} } \) are linearly dependent or linearly independent.
+Determine if the set of vectors \(\setList{ \begin{bmatrix} 2 \\ 1 \\ -1 \\ 2 \end{bmatrix}, \begin{bmatrix} -1 \\ -3 \\ 1 \\ -2 \end{bmatrix}, \begin{bmatrix} 2 \\ -4 \\ 0 \\ 0 \end{bmatrix} } \) is linearly dependent or linearly independent.
 \end{problem}
 \begin{solution}
-\[ \RREF \begin{bmatrix} 2 & -1 & 2 \\ 1 & -3 & -4 \\ -1 & 1 & 0 \\ 2 & -2 & 0 \end{bmatrix} = \begin{bmatrix} 1 & 0 & 2 \\ 0 & 1 & 2 \\ 0 & 0 & 0 \\ 0 & 0 & 0 \end{bmatrix} \]
-Since the third column is not a pivot column, the set is linearly dependent.
+The set is linearly dependent.
 \end{solution}
 
 \begin{problem}{V5}
-Determine if the vectors in the set \(\setList{ \begin{bmatrix} 2 \\ 1 \\ -1 \\ 2 \end{bmatrix}, \begin{bmatrix} -1 \\ -3 \\ 1 \\ -2 \end{bmatrix}, \begin{bmatrix} 2 \\ -4 \\ 0 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 0 \\ 0 \\ 3 \end{bmatrix} } \) are linearly dependent or linearly independent.
+Determine if the set of vectors \(\setList{ \begin{bmatrix} 2 \\ 1 \\ -1 \\ 2 \end{bmatrix}, \begin{bmatrix} -1 \\ -3 \\ 1 \\ -2 \end{bmatrix}, \begin{bmatrix} 2 \\ -4 \\ 0 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 0 \\ 0 \\ 3 \end{bmatrix} } \) is linearly dependent or linearly independent.
 \end{problem}
 \begin{solution}
-\[ \RREF \begin{bmatrix} 2 & -1 & 2  & 1\\ 1 & -3 & -4 & 0 \\ -1 & 1 & 0 & 0 \\ 2 & -2 & 0 & 3\end{bmatrix} = \begin{bmatrix} 1 & 0 & 2  & 0 \\ 0 & 1 & 2  & 0 \\ 0 & 0 & 0 & 1\\ 0 & 0 & 0 & 0 \end{bmatrix} \]
-Since the third column is not a pivot column, the set is linearly dependent.
+The set is linearly dependent.
 \end{solution}
