--- a/tex/modules/2-V/exercises/V8.tex
+++ b/tex/modules/2-V/exercises/V8.tex
@@ -2,9 +2,7 @@
 Let \(W = \vspan \left( \left\{ \begin{bmatrix} 1 \\ 1 \\ 2 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ 3 \\ 6 \\ 3 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ 3 \\ -2 \end{bmatrix}, \begin{bmatrix} 7 \\ -1 \\ 8 \\ -3 \end{bmatrix} \right\} \right)\).  Find the dimension of \(W\).
 \end{problem}
 \begin{solution}
-\[\RREF\left(\begin{bmatrix} 1 & 3 & 3 & 7 \\ 1 & 3 & -1 & -1 \\ 2 & 6 & 3 & 8 \\ 1 & 3 & -2 & -3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 3 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \\  0 & 0 & 0 & 0 \end{bmatrix}\]
-
-This has two pivot columns, so \(W\) has dimension 2.
+\(W\) has dimension 2.
 \end{solution}
 
 
@@ -12,8 +10,7 @@ This has two pivot columns, so \(W\) has dimension 2.
 Let \(W = \vspan \left( \left\{  \begin{bmatrix} -3 \\ -8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix}, \begin{bmatrix} 0 \\ -1 \\ 3 \end{bmatrix} \right\} \right)\).  Compute the dimension of \(W\).
 \end{problem}
 \begin{solution}
-Let \(A= \begin{bmatrix}-3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3\end{bmatrix}\), and compute \(\RREF(A) = \begin{bmatrix} 1 & 0 & \frac{1}{2} \\ 0 & 1 & \frac{3}{2} \\ 0 & 0 & 0 \end{bmatrix}\).
-Since there are two pivot columns, \(\dim W = 2\).
+\(\dim W = 2\).
 \end{solution}
 
 
@@ -21,8 +18,7 @@ Since there are two pivot columns, \(\dim W = 2\).
 Let \(W=\vspan\left(\left\{\begin{bmatrix} 2 \\ 0 \\ -2 \\ 0 \end{bmatrix}, \begin{bmatrix} 3 \\ 1 \\ 3 \\ 6 \end{bmatrix}, \begin{bmatrix} 0 \\ 0 \\ 1 \\ 1 \end{bmatrix}, \begin{bmatrix}1 \\ 2 \\ 0 \\ 1 \end{bmatrix}\right\}\right)\). Compute the dimension of \(W\).
 \end{problem}
 \begin{solution}
-\[\RREF\left( \begin{bmatrix} 2 & 3 & 0 & 1 \\ 0 & 1 & 0 & 2 \\ -2 & 3 & 1 & 0 \\ 0 & 6 & 1 & 1\end{bmatrix} \right) = \begin{bmatrix}1 & 0 & 0 & -\frac{5}{2} \\ 0 & 1 & 0 & 2 \\ 0 & 0 & 1 & -11\\ 0 & 0 & 0 & 0  \end{bmatrix}\]
-This has 3 pivot columns so  \(\dim(W) =3\).
+ \(\dim(W) =3\).
 \end{solution}
 
 
@@ -30,8 +26,7 @@ This has 3 pivot columns so  \(\dim(W) =3\).
 Let \(W=\vspan\left( \left\{ \begin{bmatrix} 1 \\ -1 \\ 3 \\ -3 \end{bmatrix},\begin{bmatrix} 2 \\ 0 \\ 1 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ 4 \\ -2 \end{bmatrix},  \begin{bmatrix} 1 \\ 1 \\ 1 \\ -7 \end{bmatrix} \right\}\right)\).  Compute the dimension of \(W\).
 \end{problem}
 \begin{solution}
-\[\RREF \left( \begin{bmatrix} 1 & 2 & 3 & 1 \\ -1 & 0 & -1 & 1 \\ 3 & 1 & 4 & 1 \\ -3 & 1 & -2 & -7 \end{bmatrix} \right) =  \begin{bmatrix} 1 & 0 & 1 & 0 \\ 0 & 1 & 1 & 0 \\ 0 & 0 & 0 & 1 \\ 0 & 0 & 0 & 0\end{bmatrix}\]
-This has 3 pivot columns so \(\dim(W)=3\).
+\(\dim(W)=3\).
 \end{solution}
 
 
@@ -50,21 +45,7 @@ Let \(
 \). Find the dimension of \(W\).
 \end{problem}
 \begin{solution}
-\[
-  \RREF\left(\begin{bmatrix}
-    2 & 3 & 0 \\
-    0 & 1 & 2 \\
-    2 & -1 & -8 \\
-    1 & 1 & -1
-  \end{bmatrix} \right) =
-  \begin{bmatrix}
-    1 & 0 & -3 \\
-    0 & 1 & 2 \\
-    0 & 0 & 0 \\
-    0 & 0 & 0
-  \end{bmatrix}
-\]
-Since it has two pivot columns, its dimension is \(2\).
+The dimension of \(W\) is \(2\).
 \end{solution}
 
 
@@ -82,19 +63,7 @@ Let \(
 \). Find the dimension of \(W\).
 \end{problem}
 \begin{solution}
-\[
-  \RREF\begin{bmatrix}
-    2 & 3 & 1 & -4 \\
-    -1 & 12 & 4 & 2 \\
-    4 & -9 & -3 & -8
-  \end{bmatrix} =
-  \begin{bmatrix}
-    1 & 0 & 0 & -2 \\
-    0 & 1 & 1/3 & 0 \\
-    0 & 0 & 0 & 0
-  \end{bmatrix}
-\]
-Since it has two pivot columns, its dimension is \(2\).
+The dimension of \(W\) is \(2\).
 \end{solution}
 
 \begin{problem}{V8}
@@ -108,19 +77,5 @@ Let \(
 \). Find the dimension of \(W\).
 \end{problem}
 \begin{solution}
-\[
-  \RREF\begin{bmatrix}
-    2 & -4 & 3 & 1  \\
-    -1 & 2 & 12 & 2  \\
-    4 & -8 & -9 & 3 \\
-    2 & -4 & 2 & 2
-  \end{bmatrix} =
-  \begin{bmatrix}
-    1 & -2 & 0 & 0 \\
-    0 & 0 & 1 & 0 \\
-    0 & 0 & 0 & 1 \\
-    0 & 0 & 0 & 0
-  \end{bmatrix}
-\]
-Since it has three pivot columns, its dimension is \(3\).
+The dimension of \(W\) is \(3\).
 \end{solution}
