--- a/tex/modules/2-V/exercises/V9.tex
+++ b/tex/modules/2-V/exercises/V9.tex
@@ -58,9 +58,7 @@ Let \(W\) be the subspace of \(\P^3\) given by
 Find a basis for \(W\).
 \end{problem}
 \begin{solution}
-\[\RREF\left(\begin{bmatrix} 1 & 3 & 3 & 7 \\ 1 & 3 & -1 & -1 \\ 2 & 6 & 3 & 8 \\ 1 & 3 & -2 & -3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 3 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \\  0 & 0 & 0 & 0 \end{bmatrix}\]
-
-Then a basis is
+A basis is
 \( \left\{ x^3+x^2+2x+1, 3x^3-x^2+3x-2 \right\} \).
 \end{solution}
 
@@ -75,21 +73,7 @@ Let \(
 \). Find a basis for this vector space.
 \end{problem}
 \begin{solution}
-\[
-  \RREF\left(\begin{bmatrix}
-    2 & 3 & 0 & 1 \\
-    0 & 1 & 0 & 2 \\
-    -2 & 3 & 1 & 0 \\
-    0 & 6 & 1 & 1
-  \end{bmatrix} \right) =
-  \begin{bmatrix}
-    1 & 0 & 0 & -\frac{5}{2} \\
-    0 & 1 & 0 & 2 \\
-    0 & 0 & 1 & -11\\
-    0 & 0 & 0 & 0
-  \end{bmatrix}
-\]
-Thus \(\left\{
+\(\left\{
   \begin{bmatrix} 2 & 0 \\ -2 & 0 \end{bmatrix},
   \begin{bmatrix} 3 & 1 \\ 3 & 6 \end{bmatrix},
   \begin{bmatrix} 0 & 0 \\ 1 & 1 \end{bmatrix}
@@ -100,6 +84,5 @@ Thus \(\left\{
 Let \(W\) be the subspace of \(\P^2\) given by \(W = \vspan \left( \left\{  -3x^2-8x, x^2+2x+2, -x+3\right\} \right)\).   Find a basis for \(W\).
 \end{problem}
 \begin{solution}
-Let \(A= \begin{bmatrix}-3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3\end{bmatrix}\), and compute \(\RREF(A) = \begin{bmatrix} 1 & 0 & \frac{1}{2} \\ 0 & 1 & \frac{3}{2} \\ 0 & 0 & 0 \end{bmatrix}\).
-Since the first two columns are pivot columns, \(\left\{ -3x^2-8x, x^2+2x+2\right\} \) is a basis for \(W\).
+\(\left\{ -3x^2-8x, x^2+2x+2\right\} \) is a basis for \(W\).
 \end{solution}
