--- a/tex/modules/4-A/exercises/A3.tex
+++ b/tex/modules/4-A/exercises/A3.tex
@@ -1,12 +1,9 @@
-\begin{problem}{A4}
+\begin{problem}{A3}
 Let $T: \IR^4\rightarrow \IR^4$ be the linear transformation given by $$T\left(\begin{bmatrix} x \\ y \\ z \\ w \end{bmatrix} \right) = \begin{bmatrix} x+3y+3z+7w \\ x+3y-z-w \\ 2x+6y+3z+8w \\ x+3y-2z-3w \end{bmatrix}$$
 Compute a basis for the kernel and a basis for the image of $T$.
 \end{problem}
 \begin{solution}
-
-$$\RREF\left(\begin{bmatrix} 1 & 3 & 3 & 7 \\ 1 & 3 & -1 & -1 \\ 2 & 6 & 3 & 8 \\ 1 & 3 & -2 & -3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 3 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \end{bmatrix}$$
-
-Then a basis for the kernel is
+A basis for the kernel is
 $$\left\{ \begin{bmatrix} -3 \\ 1 \\ 0 \\ 0 \end{bmatrix} , \begin{bmatrix} -1\\0 \\ -2 \\ 1 \end{bmatrix} \right\}$$
 and a basis for the image is
 $$\left\{ \begin{bmatrix} 1 \\ 1 \\ 2 \\ 1 \end{bmatrix} , \begin{bmatrix} 3 \\ -1 \\ 3 \\ -2 \end{bmatrix}\right\} $$
@@ -14,29 +11,27 @@ $$\left\{ \begin{bmatrix} 1 \\ 1 \\ 2 \\ 1 \end{bmatrix} , \begin{bmatrix} 3 \\ 
 
 
 
-\begin{problem}{A4}
+\begin{problem}{A3}
 Let $T: \IR^3\rightarrow \IR^3$ be the linear transformation given by $$T\left(\begin{bmatrix} x \\ y \\ z \\  \end{bmatrix} \right) = \begin{bmatrix} -3x+y \\ -8x+2y-z \\ 2y+3z \end{bmatrix}$$
 Compute a basis for the kernel and a basis for the image of $T$.
 \end{problem}
 \begin{solution}
-Let $A= \begin{bmatrix}-3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3\end{bmatrix}$, and compute $\RREF(A) = \begin{bmatrix} 1 & 0 & \frac{1}{2} \\ 0 & 1 & \frac{3}{2} \\ 0 & 0 & 0 \end{bmatrix}$.  Then a basis for the image is its columns, $$\left\{ \begin{bmatrix} -3 \\ -8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix} \right\}$$
-And the kernel is the solution set of $AX=0$, so a basis would be
-$$\left\{\begin{bmatrix} 1 \\ 3 \\ -2 \end{bmatrix} \right\}$$
+A basis for the image is  $$\left\{ \begin{bmatrix} -3 \\ -8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix} \right\}$$
+and a basis of the kernel is 
+$$\left\{\begin{bmatrix} 1 \\ 3 \\ -2 \end{bmatrix} \right\}.$$
 \end{solution}
 
 
-\begin{problem}{A4}
+\begin{problem}{A3}
 Let $T: \IR^4 \rightarrow \IR^3$ be the linear map given by $T\left(\begin{bmatrix} x \\ y \\ z \\ w \end{bmatrix} \right) = \begin{bmatrix}  8x-3y-z+4w \\ y+3z-4w \\ -7x+3y+2z-5w\end{bmatrix} $.
 Compute a basis for the kernel and a basis for the image of $T$.
 \end{problem}
 \begin{solution}
-$$\RREF \left( \begin{bmatrix} 8 & -3 & -1 & 4 \\ 0 & 1 & 3 & -4 \\ -7 & 3 & 2 & -5 \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & 1 & -1 \\ 0 & 1 & 3 & -4 \\ 0 & 0 & 0 & 0 \end{bmatrix}$$
-
-Thus \(\left\{ \begin{bmatrix} 8 \\ 0 \\ -7 \end{bmatrix}, \begin{bmatrix} -3 \\ 1 \\ 3 \end{bmatrix} \right\}\) is a basis for the image, and \( \left\{ \begin{bmatrix} 1 \\ 3 \\ -1 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 4 \\ 0 \\ 1 \end{bmatrix} \right\} \) is a basis for the kernel.
+\(\left\{ \begin{bmatrix} 8 \\ 0 \\ -7 \end{bmatrix}, \begin{bmatrix} -3 \\ 1 \\ 3 \end{bmatrix} \right\}\) is a basis for the image, and \( \left\{ \begin{bmatrix} 1 \\ 3 \\ -1 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 4 \\ 0 \\ 1 \end{bmatrix} \right\} \) is a basis for the kernel.
 \end{solution}
 
 
-\begin{problem}{A4}
+\begin{problem}{A3}
 Let $T: \IR^3 \rightarrow \IR^3$ be the linear map given by \(
   T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) =
   \begin{bmatrix}
@@ -47,19 +42,7 @@ Let $T: \IR^3 \rightarrow \IR^3$ be the linear map given by \(
 \). Compute a basis for the kernel and a basis for the image of $T$.
 \end{problem}
 \begin{solution}
-\[
-  \RREF \left( \begin{bmatrix}
-    8 & -3 & -1 \\
-    0 & 1 & 3 \\
-    -7 & 3 & 2
-  \end{bmatrix} \right) = \begin{bmatrix}
-    1 & 0 & 1 \\
-    0 & 1 & 3 \\
-    0 & 0 & 0
-  \end{bmatrix}
-\]
-
-Thus \(\left\{
+\(\left\{
   \begin{bmatrix} 8 \\ 0 \\ -7 \end{bmatrix},
   \begin{bmatrix} -3 \\ 1 \\ 3 \end{bmatrix}
 \right\} \) is a basis for the image, and \(\left\{
@@ -68,7 +51,7 @@ Thus \(\left\{
 \end{solution}
 
 
-\begin{problem}{A4}
+\begin{problem}{A3}
 Let $T: \IR^3 \rightarrow \IR^3$ be the linear map given by the standard matrix
 \(
   \begin{bmatrix}
@@ -79,19 +62,7 @@ Let $T: \IR^3 \rightarrow \IR^3$ be the linear map given by the standard matrix
 \). Compute a basis for the kernel and a basis for the image of $T$.
 \end{problem}
 \begin{solution}
-\[
-  \RREF \left( \begin{bmatrix}
-    1 & 2 & 5 \\
-    0 & -2 & -4 \\
-    -3 & 1 & -1
-  \end{bmatrix} \right) = \begin{bmatrix}
-    1 & 0 & 1 \\
-    0 & 1 & 2 \\
-    0 & 0 & 0
-  \end{bmatrix}
-\]
-
-Thus \(\left\{
+\(\left\{
   \begin{bmatrix} 1 \\ 0 \\ -3 \end{bmatrix},
   \begin{bmatrix} 2 \\ -2 \\ 1 \end{bmatrix}
 \right\} \) is a basis for the image, and \(\left\{
@@ -100,7 +71,7 @@ Thus \(\left\{
 \end{solution}
 
 
-\begin{problem}{A4}
+\begin{problem}{A3}
 Let $T: \IR^4 \rightarrow \IR^2$ be the linear map given by the standard matrix
 \(
   \begin{bmatrix}
@@ -110,17 +81,7 @@ Let $T: \IR^4 \rightarrow \IR^2$ be the linear map given by the standard matrix
 \). Compute a basis for the kernel and a basis for the image of $T$.
 \end{problem}
 \begin{solution}
-\[
-  \RREF \left( \begin{bmatrix}
-    1 & 2 & 5 & -1 \\
-    0 & -2 & -4 & 2
-  \end{bmatrix} \right) = \begin{bmatrix}
-    1 & 0 & 1 & 1 \\
-    0 & 1 & 2 & -1
-  \end{bmatrix}
-\]
-
-Thus \(\left\{
+\(\left\{
   \begin{bmatrix} 1 \\ 0  \end{bmatrix},
   \begin{bmatrix} 2 \\ -2 \end{bmatrix}
 \right\} \) is a basis for the image, and \(\left\{
@@ -130,7 +91,7 @@ Thus \(\left\{
 \end{solution}
 
 
-\begin{problem}{A4}
+\begin{problem}{A3}
 Let $T: \IR^2 \rightarrow \IR^5$ be the linear map given by the standard matrix
 \(
   \begin{bmatrix}
@@ -143,23 +104,7 @@ Let $T: \IR^2 \rightarrow \IR^5$ be the linear map given by the standard matrix
 \). Compute a basis for the kernel and a basis for the image of $T$.
 \end{problem}
 \begin{solution}
-\[
-  \RREF \left(\begin{bmatrix}
-    3 & 1 \\
-    0 & 0 \\
-    -6 & -2 \\
-    1 & \frac{1}{3} \\
-    9 & 3
-  \end{bmatrix} \right) = \begin{bmatrix}
-    1 & \frac{1}{3} \\
-    0 & 0 \\
-    0 & 0 \\
-    0 & 0 \\
-    0 & 0
-  \end{bmatrix}
-\]
-
-Thus \(\left\{
+\(\left\{
 \begin{bmatrix}
   3  \\
   0  \\
@@ -172,7 +117,7 @@ Thus \(\left\{
 \right\} \) is a basis for the kernel.
 \end{solution}
 
-\begin{problem}{A4}
+\begin{problem}{A3}
 Let $T: \IR^4 \rightarrow \IR^3$ be the linear map given by the standard matrix
 \(
   \begin{bmatrix}
@@ -183,19 +128,7 @@ Let $T: \IR^4 \rightarrow \IR^3$ be the linear map given by the standard matrix
 \). Compute a basis for the kernel and a basis for the image of $T$.
 \end{problem}
 \begin{solution}
-\[
-  \RREF \left(\begin{bmatrix}
-    2 & 1 & 0 & 3 \\
-    -4 & -2 & 0 & 5 \\
-    -2 & -1 & 0 & 0
-  \end{bmatrix} \right) = \begin{bmatrix}
-    1 & \frac{1}{2} & 0 & 0 \\
-    0 & 0 & 0 & 1 \\
-    0 & 0 & 0 & 0
-  \end{bmatrix}
-\]
-
-Thus \(\left\{
+\(\left\{
 \begin{bmatrix}
   2 \\ -4 \\ -2
 \end{bmatrix},
