--- a/tex/modules/5-M/exercises/M2.tex
+++ b/tex/modules/5-M/exercises/M2.tex
@@ -1,338 +1,61 @@
 \begin{problem}{M2}
-Consider the two row operations 
-\(R_2-4R_1\to R_2\) and \(-\frac{1}{3}R_2\to R_2\)
-applied as follows to show \(A\sim B\):
-\begin{align*}
-A
-  =
-\begin{bmatrix}
-1&2&3\\
-4&5&6\\
-7&8&9
-\end{bmatrix}
-  &\sim
-\begin{bmatrix}
-1&2&3\\
-4-4(1)&5-4(2)&6-4(3)\\
-7&8&9
-\end{bmatrix}
-  =
-\begin{bmatrix}
-1&2&3\\
-0&-3&-6\\
-7&8&9
-\end{bmatrix}
-  \\&\sim
-\begin{bmatrix}
-1&2&3\\
--\frac{1}{3}(0)&-\frac{1}{3}(-3)&-\frac{1}{3}(-6)\\
-7&8&9
-\end{bmatrix}
-  =
-\begin{bmatrix}
-1&2&3\\
-0&1&2\\
-7&8&9
-\end{bmatrix}
-  = 
-B
-\end{align*}
-Express these row operations as matrix multiplication
-by expressing \(B\) as the product of two matrices and \(A\).
+Determine if the matrix $\begin{bmatrix} 1 & 3 & 3 & 7 \\ 1 & 3 & -1 & -1 \\ 2 & 6 & 3 & 8 \\ 1 & 3 & -2 & -3 \end{bmatrix}$ is invertible.
 \end{problem}
 \begin{solution}
-\[
-B
-  =
-\begin{bmatrix}
-  1&0&0\\
-  0&\frac{1}{3}&0\\
-  0&0&1
-\end{bmatrix}
-\begin{bmatrix}
-  1&0&0\\
-  -4&1&0\\
-  0&0&1
-\end{bmatrix}
-A
-\]
+Not invertible.
+\end{solution}
+
+
+
+\begin{problem}{M2}
+Determine if the matrix $\begin{bmatrix}-3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3\end{bmatrix}$ is invertible.
+\end{problem}
+\begin{solution}
+Not invertible.
 \end{solution}
 
 
 \begin{problem}{M2}
-Consider the two row operations 
-\(R_1\leftrightarrow R_2\) and \(R_3+R_1\to R_3\)
-applied as follows to show \(A\sim B\):
-\begin{align*}
-A
-  =
-\begin{bmatrix}
-0&3&-1\\
-1&2&3\\
--1&4&5
-\end{bmatrix}
-  &\sim
-\begin{bmatrix}
-1&2&3\\
-0&3&-1\\
--1&4&5
-\end{bmatrix}
-  \\&\sim
-\begin{bmatrix}
-1&2&3\\
-0&3&-1\\
--1+1&4+2&5+3
-\end{bmatrix}
-  =
-\begin{bmatrix}
-1&2&3\\
-0&3&-1\\
-0&6&8
-\end{bmatrix}
-  = 
-B
-\end{align*}
-Express these row operations as matrix multiplication
-by expressing \(B\) as the product of two matrices and \(A\).
+  Determine if the matrix $\begin{bmatrix} 1 & 3 & -1 \\ 2 & 7 & 0 \\ -1 & -1 & 5 \end{bmatrix}$ is invertible.
 \end{problem}
 \begin{solution}
-\[
-B
-  =
-\begin{bmatrix}
-  1&0&0\\
-  0&1&0\\
-  1&0&1
-\end{bmatrix}
-\begin{bmatrix}
-  0&1&0\\
-  1&0&0\\
-  0&0&1
-\end{bmatrix}
-A
-\]
+Not invertible.
 \end{solution}
 
 
 \begin{problem}{M2}
-Consider the two row operations 
-\(\frac{1}{2} R_3\to R_3\) and \(R_1\leftrightarrow R_3\)
-applied as follows to show \(A\sim B\):
-\begin{align*}
-A
-  =
-\begin{bmatrix}
--3&4&0\\
--7&2&3\\
-2&-8&6
-\end{bmatrix}
-  &\sim
-\begin{bmatrix}
--3&4&0\\
--7&2&3\\
-\frac{1}{2}(2)&\frac{1}{2}(-8)&\frac{1}{2}(6)
-\end{bmatrix}
-  =
-\begin{bmatrix}
--3&4&0\\
--7&2&3\\
-1&-4&3
-\end{bmatrix}
-  \\&\sim
-\begin{bmatrix}
-1&-4&3\\
--7&2&3\\
--3&4&0
-\end{bmatrix}
-  =
-B
-\end{align*}
-Express these row operations as matrix multiplication
-by expressing \(B\) as the product of two matrices and \(A\).
+Determine if the matrix $\begin{bmatrix} 3 & -1 & 0 & 4 \\ 2 & 1 & 1 & -1 \\ 0 & 1 & 1 & 3 \\ 1 & -2 & 0 & 0 \end{bmatrix}$ is invertible.
 \end{problem}
 \begin{solution}
-\[
-B
-  =
-\begin{bmatrix}
-  0&0&1\\
-  0&1&0\\
-  1&0&0
-\end{bmatrix}
-\begin{bmatrix}
-  1&0&0\\
-  0&1&0\\
-  0&0&\frac{1}{2}
-\end{bmatrix}
-A
-\]
+Invertible.
 \end{solution}
 
 \begin{problem}{M2}
-Consider the two row operations 
-\(R_1\leftrightarrow R_3\) and \(3 R_2\to R_2\)
-applied as follows to show \(A\sim B\):
-\begin{align*}
-A
-  =
-\begin{bmatrix}
--3&4&0\\
--7&2&3\\
-2&-8&6
-\end{bmatrix}
-  &\sim
-\begin{bmatrix}
-2&-8&6\\
--7&2&3\\
--3&4&0\\
-\end{bmatrix}
-  \\&\sim
-\begin{bmatrix}
-2&-8&6\\
-3(-7)&3(2)&3(3)\\
--3&4&0\\
-\end{bmatrix}
-  =
-\begin{bmatrix}
-2&-8&6\\
--21&6&9\\
--3&4&0
-\end{bmatrix}
-  =
-B
-\end{align*}
-Express these row operations as matrix multiplication
-by expressing \(B\) as the product of two matrices and \(A\).
+Determine if the matrix $\begin{bmatrix} 3 & -1 & 0 & 4 \\ 2 & 1 & 1 & 1 \\ 0 & 1 & 1 & -1 \\ 1 & -2 & 0 & 3 \end{bmatrix}$ is invertible.
 \end{problem}
 \begin{solution}
-\[
-B
-  =
-\begin{bmatrix}
-  1&0&0\\
-  0&3&0\\
-  0&0&1
-\end{bmatrix}
-\begin{bmatrix}
-  0&0&1\\
-  0&1&0\\
-  1&0&0
-\end{bmatrix}
-A
-\]
-\end{solution}
-
-\begin{problem}{M2}
-Consider the two row operations 
-\(-2R_1\to R_1\) and \(R_3+2R_1\to R_3\)
-applied as follows to show \(A\sim B\):
-\begin{align*}
-A
-  =
-\begin{bmatrix}
--\frac{1}{2}&0&3\\
--4&2&3\\
--2&5&0
-\end{bmatrix}
-  &\sim
-\begin{bmatrix}
--2(-\frac{1}{2})&-2(0)&-2(3)\\
--4&2&3\\
--2&5&0
-\end{bmatrix}
-  =
-\begin{bmatrix}
-1&0&-6\\
--4&2&3\\
--2&5&0
-\end{bmatrix}
-  \\&\sim
-\begin{bmatrix}
-1&0&-6\\
--4&2&3\\
--2+2(1)&5+2(0)&0+2(-6)
-\end{bmatrix}
-  =
-\begin{bmatrix}
-1&0&-6\\
--4&2&3\\
-0&5&-12
-\end{bmatrix}
-  = 
-B
-\end{align*}
-Express these row operations as matrix multiplication
-by expressing \(B\) as the product of two matrices and \(A\).
-\end{problem}
-\begin{solution}
-\[
-B
-  =
-\begin{bmatrix}
-  1&0&0\\
-  0&1&0\\
-  2&0&1
-\end{bmatrix}
-\begin{bmatrix}
-  -2&0&0\\
-  0&1&0\\
-  0&0&1
-\end{bmatrix}
-A
-\]
+Invertible.
 \end{solution}
 
 
 \begin{problem}{M2}
-Consider the two row operations 
-\(R_2-4R_3\to R_2\) and \(R_1\leftrightarrow R_3\)
-applied as follows to show \(A\sim B\):
-\begin{align*}
-A
-  =
-\begin{bmatrix}
-0&3&-1\\
--4&2&3\\
--1&4&5
-\end{bmatrix}
-  &\sim
-\begin{bmatrix}
-0&3&-1\\
--4-4(-1)&2-4(4)&3-4(5)\\
--1&4&5
-\end{bmatrix}
-  =
-\begin{bmatrix}
-0&3&-1\\
-0&-14&-17\\
--1&4&5
-\end{bmatrix}
-  \\&\sim
-\begin{bmatrix}
--1&4&5\\
-0&-14&-17\\
-0&3&-1\\
-\end{bmatrix}
-  = 
-B
-\end{align*}
-Express these row operations as matrix multiplication
-by expressing \(B\) as the product of two matrices and \(A\).
+Determine if the matrix $\begin{bmatrix} 3 & -1 & 0  \\ 2 & 1 & 1  \\ 0 & 1 & 1   \end{bmatrix}$ is invertible.
 \end{problem}
 \begin{solution}
-\[
-B
-  =
-\begin{bmatrix}
-  0&0&1\\
-  0&1&0\\
-  1&0&0
-\end{bmatrix}
-\begin{bmatrix}
-  1&0&0\\
-  0&1&-4\\
-  0&0&1
-\end{bmatrix}
-A
-\]
+Invertible.
+\end{solution}
+
+
+\begin{problem}{M2}
+Determine if the matrix $\begin{bmatrix} 2 & 1 & 0 & 3 \\ 1 & -1 & 3 & 1 \\ 3 & 2 & -1 & 7 \\ 4 & 1 & 2 & 0 \end{bmatrix}$ is invertible.
+\end{problem}
+\begin{solution}
+Not invertible.
+\end{solution}
+
+\begin{problem}{M2}
+Determine if the matrix $\begin{bmatrix} 2 & 1 & 0 & 3 \\ 1 & -1 & 0 & 1 \\ 3 & 2 & -1 & 7 \\ 4 & 1 & 2 & 0 \end{bmatrix}$ is invertible.
+\end{problem}
+\begin{solution}
+Invertible.
 \end{solution}
