--- a/tex/modules/2-V/sections/0.tex
+++ b/tex/modules/2-V/sections/0.tex
@@ -68,5 +68,14 @@ and \textbf{invalid} if it does not.
   but we will also study other types of vector spaces.
 \end{observation}
 
+\begin{observation}
+The space of \term{\(m \times n\) matrices}
+  \[
+    M_{m,n}=\setBuilder{\begin{bmatrix}a_{11}  & a_{12} & \cdots & a_{1n} \\ a_{21} & a_{22} & \cdots & a_{2n} \\\vdots & \vdots & & \ddots & \vdots \\a_{m1} & a_{m2} & \cdots & a_{mn} \end{bmatrix}}{a_{11},\ldots,a_{mn} \in\IR}
+  \] 
+  satisfies all eight requirements for component-wise addition
+  and scalar multiplication.
+\end{observation}
+
 
 \end{applicationActivities}
